Update 저장 프로시저, 준비된 명령문.md

--- a/DB/저장 프로시저, 준비된 명령문.md
+++ b/DB/저장 프로시저, 준비된 명령문.md
@@ -1,50 +1,67 @@
-# 공통적인 특성(이점)
-성능 향상, SQL 인젝션 방지 <br/>
+# 요약
+쿼리문을 미리 준비해놓고 
 
 # 저장 프로시저 (Stored Procedure)
-SQL로 작성된 DB 서버 측 프로시저로 DB 서버에 저장된다. <br/>
-그렇기에 DB에서 직접 액세스 가능하며, 프로그래밍 언어(c++)를 사용하는 클라이언트 앱에서도 사용할 수 있다. <br/>
-
+SQL로 작성되어 DB 서버에 저장된다. 그렇기에 DB에 직접 액세스 가능하고 앱(c++, java)에서도 해당 언어로 사용할 수 있다. <br/>
 ## 이점1
-서버 쪽 저장 프로시저는 일반적인 클라이언트 쪽 논리 처리에 비해 많은 이점을 제공한다. <br/>
-네트워크를 통해 이동하는 트래픽이 감소한다는 것인데, 이는 주요 병목 현상 중 하나이다. <br/>
-
+서버쪽에 저장된다는 것의 장점으로 네트워크를 통해 이동하는 트래픽이 감소한다. 이는 DB의 주요 병목 현상 중 하나이다. <br/>
 ## 이점2
-클라이언트 측에서 전체 텍스트 쿼리를 보낼 경우 서버 측의 DB 드라이버는 쿼리 문이 호출될 때마다 <br/>
-파싱(parse), 분석(analyze), 계획(plan), 최적화(optimize) 등을 매번 해줘야 한다는 것인데 <br/>
-저장 프로시저를 사용할 경우 DB 엔진이 프로시저를 한 번 미리 컴파일하면 끝이다. <br/>
-
+저장 프로시저를 사용하지 않으면 매 쿼리마다 클라이언트 앱에서 전체 텍스트 쿼리를 보내고 서버 측의 DB 드라이버는 <br/>
+쿼리문이 호출될 때마다 파싱(parse), 분석(analyze), 실행 계획(plan), 최적화(optimaize) 등을 해주게 되는데 <br/>
+저장 프로시저를 사용하면 DB에 한 번만 컴파일되면 끝이다 <br/>
 ## 이점3
 한 번 작성해놓으면 어디서든 실행가능하다는 것 <br/>
-저장 프로시저를 SQL로 작성하여 DB에 저장해놓으면 연결된 여러 클라이언트 프로그래밍 언어(java, c++)에서 사용할 수 있다. <br/>
-
+저장 프로시저가 DB 서버에 저장되므로 연결된 여러 클라이언트 프로그래밍 언어로 쓰여진 앱(java, c++)에서 사용할 수 있다. <br/>
 ## 이점4
 보안 강화 <br/>
 저장 프로시저는 데이터베이스에 대한 사용자의 액세스를 분리하여 보안을 강화한다. <br/>
 예를 들어, 저장 프로시저를 실행하기 위해 execute 권한 이외의 액세스 권한이나 권한을 부여해야 하는 요구 사항은 없다.
+// 수정 필요 <br/>
 
-# 준비된 명령문
-종종 저장 프로시저와 혼동되는데, 이는 아마도 동일한 핵심 이점을 가지기 때문일 것이다. <br/>
+# 준비된 명령문 (Prepared Statement)
+준비된 명령문도 저장 프로시저와 같은 개념이다. 미리 쿼리문을 준비해놓고 실행할 때
+세 과정(prepare, execute, deallocate)으로 진행된다. <br/>
+1. prepare - 준비된 명령문 생성
+2. execute - 준비된 명령문을 사용하여 쿼리
+3. deallocate - 준비된 명령문 제거
+<br/>
 
-준비된 명령문은 세 가지 요소로 구성된다. <br/>
-prepare - 이름을 지정하여 실행할 문을 준비하고 수행할 SQL 쿼리를 정의한다. <br/>
-execute - 준비된 명령문을 실행하고 자리 표시자를 통해 변수를 전달한다. <br/>
-de-allocate - 준비된 명령문 및 리소스를 해제한다. <br/>
 
-<br/><br/>
-준비된 명령문 작동 방식 <br/>
 
-즉, 세션 중 첫 번째 쿼리에만 클라이언트가 서버에 SQL 쿼리의 전체문을 보내고 <br/>
-이후에는 클라이언트가 핸들과 변수만 전송한다 <br/>
+
+준비된 명령문이 생성되면 클라이언트는 변수에 대한 자리 표시자가 있는 쿼리의 프로토타입을 DB 서버에 보낸다. <br/>
+서버는 이 프로토타입에 대한 구문 분석을 진행한다. 이 과정은 DB 서버가 모든 쿼리에 대해 거치는 준비 과정이다. <br/>
+준비된 명령문을 사용하면 DB 서버는 쿼리 구조를 저장하고 명령문 핸들을 클라이언트에 반환한다. <br/>
+이후부터는 클라이언트는 쿼리문 핸들과 데이터만 서버에 전송한다 <br/>
+
+즉, 세션 중 첫 번재 경우에만 클라이언트가 서버에 SQL 쿼리의 전체 본문을 보내고 이 과정에서만 DB 서버에서는 구문 분석을
+진행하며 이후부터는 클라이언트에서 핸들과 변수들만 전송한다.
+
+
+
+
 
 
 # 요약
-Prepared Statement와 Stored Procedure는 비슷한 성능과 보안상의 이점을 가진다. <br/>
+ <br/>
 
 
 출처 : <br/>
 https://blog.udemy.com/sql-stored-procedure/ <br/>
-<hr/>
+<hr/><br/><br/>
 
+# PreparedStatement
+PreparedStatement는 이름에서부터 유추할 수 있듯이 실행할 쿼리를 미리 준비하고 실행할 때 매개변수 값만 바인딩하여 사용하는 방식이다 <br/>
+이게 무슨 소리인지는 아래를 보자 <br/>
+![image](https://github.com/user-attachments/assets/45991a26-ccf3-4b65-890f-0af0745d2776)
+
+
+
+
+
+출처 : <br/>
+https://diqmwl-programming.tistory.com/82#google_vignette <br/>
+https://digitalbourgeois.tistory.com/496 <br/>
+<hr/><br/><br/>
 
 
