Update 저장 프로시저, 준비된 명령문.md

--- a/DB/저장 프로시저, 준비된 명령문.md
+++ b/DB/저장 프로시저, 준비된 명령문.md
@@ -1,67 +1,34 @@
 # 요약
-쿼리문을 미리 준비해놓고 
+일반적으로 쿼리문을 실행할 때마다 아래와 같은 과정을 거친다. <br/>
+Parse(문법 검사, 의미 검사, 권한 검사, 실행 계획) -> Bind -> Execute -> Fetch <br/>
+쿼리문을 한 번만 쓰는 것이 아니라 할 때 호출할 때 마다 이러한 과정을 거치는 것은 비효율적이다. <br/>
+저장 프로시저와 준비된 명령문은 Parse 과정을 한 번만 한 뒤 이후에는 생략하는 방법이다. <br/>
+차이점은 저장 프로시저의 경우 DB에 영구적으로 저장되고, 준비되니 명령문은 DB 세션이 유지되는 동안만 저장된다. <br/>
 
 # 저장 프로시저 (Stored Procedure)
-SQL로 작성되어 DB 서버에 저장된다. 그렇기에 DB에 직접 액세스 가능하고 앱(c++, java)에서도 해당 언어로 사용할 수 있다. <br/>
-## 이점1
-서버쪽에 저장된다는 것의 장점으로 네트워크를 통해 이동하는 트래픽이 감소한다. 이는 DB의 주요 병목 현상 중 하나이다. <br/>
-## 이점2
-저장 프로시저를 사용하지 않으면 매 쿼리마다 클라이언트 앱에서 전체 텍스트 쿼리를 보내고 서버 측의 DB 드라이버는 <br/>
-쿼리문이 호출될 때마다 파싱(parse), 분석(analyze), 실행 계획(plan), 최적화(optimaize) 등을 해주게 되는데 <br/>
-저장 프로시저를 사용하면 DB에 한 번만 컴파일되면 끝이다 <br/>
-## 이점3
-한 번 작성해놓으면 어디서든 실행가능하다는 것 <br/>
-저장 프로시저가 DB 서버에 저장되므로 연결된 여러 클라이언트 프로그래밍 언어로 쓰여진 앱(java, c++)에서 사용할 수 있다. <br/>
-## 이점4
-보안 강화 <br/>
-저장 프로시저는 데이터베이스에 대한 사용자의 액세스를 분리하여 보안을 강화한다. <br/>
-예를 들어, 저장 프로시저를 실행하기 위해 execute 권한 이외의 액세스 권한이나 권한을 부여해야 하는 요구 사항은 없다.
-// 수정 필요 <br/>
+## 성능
+저장 프로시저는 처음 한 번 최적화, 컴파일 등의 과정을 거쳐 그 결과가 캐시에 저장된다. <br/>
+이후 호출 시 최적화 과정은 패스하고 실행하므로 성능이 향상된다. <br/>
+쿼리문의 텍스트를 전체 전송하는 것보다 저장 프로시저의 이름과 바인딩되는 변수 등만 보내면 됨으로 네트워크 부하 감소 <br/>
+## 편의성
+DB에 저장되고 C++이나 Java 등의 클라이언트 앱에서 저장 프로시저의 이름만 호출하면 되기에 관리와 사용이 편하다. <br/>
+한 번만 생성해놓으면 언제, 어디서든지 사용 가능하다.
+## 보안
+사용자별로 테이블에 접근 권한을 주지 않고 저장 프로시저에만 접근 권한을 줌으로써, 보안을 더 강화할 수 있다. <br/>
+
 
 # 준비된 명령문 (Prepared Statement)
-준비된 명령문도 저장 프로시저와 같은 개념이다. 미리 쿼리문을 준비해놓고 실행할 때
-세 과정(prepare, execute, deallocate)으로 진행된다. <br/>
-1. prepare - 준비된 명령문 생성
-2. execute - 준비된 명령문을 사용하여 쿼리
-3. deallocate - 준비된 명령문 제거
-<br/>
-
-
-
-
-준비된 명령문이 생성되면 클라이언트는 변수에 대한 자리 표시자가 있는 쿼리의 프로토타입을 DB 서버에 보낸다. <br/>
-서버는 이 프로토타입에 대한 구문 분석을 진행한다. 이 과정은 DB 서버가 모든 쿼리에 대해 거치는 준비 과정이다. <br/>
-준비된 명령문을 사용하면 DB 서버는 쿼리 구조를 저장하고 명령문 핸들을 클라이언트에 반환한다. <br/>
-이후부터는 클라이언트는 쿼리문 핸들과 데이터만 서버에 전송한다 <br/>
-
-즉, 세션 중 첫 번재 경우에만 클라이언트가 서버에 SQL 쿼리의 전체 본문을 보내고 이 과정에서만 DB 서버에서는 구문 분석을
-진행하며 이후부터는 클라이언트에서 핸들과 변수들만 전송한다.
-
-
-
-
-
-
-# 요약
- <br/>
+크게 3가지 단계로 나뉜다. (Prepare, Execute, De-allocate)
+Prepare - 쿼리문을 컴파일 후 구문 분석
+Execute - 쿼리문에 변수 바인딩 후 실행
+de-allocate - db세션이 종료되거나 할당 해제
 
 
 출처 : <br/>
 https://blog.udemy.com/sql-stored-procedure/ <br/>
+https://blog.naver.com/PostView.naver?blogId=dwakna&logNo=222831448663 <br/>
 <hr/><br/><br/>
 
-# PreparedStatement
-PreparedStatement는 이름에서부터 유추할 수 있듯이 실행할 쿼리를 미리 준비하고 실행할 때 매개변수 값만 바인딩하여 사용하는 방식이다 <br/>
-이게 무슨 소리인지는 아래를 보자 <br/>
-![image](https://github.com/user-attachments/assets/45991a26-ccf3-4b65-890f-0af0745d2776)
 
-
-
-
-
-출처 : <br/>
-https://diqmwl-programming.tistory.com/82#google_vignette <br/>
-https://digitalbourgeois.tistory.com/496 <br/>
-<hr/><br/><br/>
 
 
