--- a/게임서버프로그래밍교과서/07.DB 기초.md
+++ b/게임서버프로그래밍교과서/07.DB 기초.md
@@ -1,1 +1,83 @@
 
+# 7.1 ~ 4 DB 시작
+DB에서 다루는 데이터는 표(table) 형태의 집합
+이 테이블의 집합은 DB 인스턴스라고 하며 DB가 다루는 가장 큰 단위의 데이터 집합 <br/>
+
+DML(Data Manipulation Language) - 데이터 조작 언어 <br/>
+데이터베이스에 "저장된 데이터"를 조회, 삽입, 수정, 삭제하는 명령 <br/>
+즉, 사용자가 데이터를 조작하는 기능 담당 <br/>
+SELECT, INSERT, UPDATE, DELETE <br/>
+
+DDL(Data Definition Language) - 데이터 정의 언어 <br/>
+데이터베이스의 "구조"(테이블, 뷰, 인덱스 등)를 생성, 수정, 삭제하는 명령 <br/>
+즉, 데이터 저장 구조 정의 <br/>
+CREATE, ALTER, DROP, TRUNCATE
+
+추가적으로 DML의 경우 트랜잭션, 롤백 등을 지원하지만 DDL은 그런 거 없다. <br/>
+
+테이블에 사용할 수 있는 필드 <br/>
+<table>
+  <th>
+    <td>종류</td><td>설명</td><td>특징</td><td>예시</td>
+  </th>
+  <tr>
+    <td>int</td>
+    <td>정수</td>
+    <td>-</td>
+    <td>345</td>
+  </tr>
+  <tr>
+    <td>flaot</td>
+    <td>부동소수점</td>
+    <td>-</td>
+    <td>123.45</td>
+  </tr>
+  <tr>
+    <td>char(n)</td>
+    <td>길이 n 문자열</td>
+    <td>입력한 문자열이 짧으면 뒤에 빈칸이 강제로 채워짐</td>
+    <td>"a    "</td>
+  </tr>
+  <tr>
+    <td>varchar(n)</td>
+    <td>최대 길이 n의 문자열</td>
+    <td>-</td>
+    <td>"a"</td>
+  </tr>
+  <tr>
+    <td>nvarchar, nchar</td>
+    <td>n이 붙으면 유니코드</td>
+    <td>UTF-16</td>
+    <td>"こんにちは안녕"</td>
+  </tr>
+  <tr>
+    <td>text</td>
+    <td>길이 무제한 문자열</td>
+    <td>읽기/쓰기 속도가 느림</td>
+    <td>-</td>
+  </tr>
+  <tr>
+    <td>binary</td>
+    <td>길이 무제한 바이너리</td>
+    <td>상동</td>
+    <td>11 22 3F 4B BA 00 CB</td>
+  </tr>
+  <tr>
+    <td>unique identifier</td>
+    <td>GUID 또는 UUID</td>
+    <td>MySQL에서는 사용 불가</td>
+    <td>{58269115-1FDC-4617-BC0F-7F782197270F}</td>
+  </tr>
+</table>
+추가 내용 : 필드에 NULL을 저장할 수도 있다. NULL은 0이나 ""가 아니라 값이 존재하지 않는다는 것이다. <br/>
+
+# 인덱스와 키
+
+# 
+
+
+
+
+중간 출처 : <br/>
+https://honeyjuny.tistory.com/entry/SQL%EC%9D%98-%ED%95%B5%EC%8B%AC-%EA%B0%9C%EB%85%90%EC%9D%B8-DML%EA%B3%BC-DDL%EC%9D%98-%EC%B0%A8%EC%9D%B4%EC%A0%90 <br/>
+<hr/>
