--- a/게임서버프로그래밍교과서/07.DB 기초.md
+++ b/게임서버프로그래밍교과서/07.DB 기초.md
@@ -108,11 +108,40 @@ https://honeyjuny.tistory.com/entry/SQL%EC%9D%98-%ED%95%B5%EC%8B%AC-%EA%B0%9C%EB
 <hr/><br/><br/>
 
 # 7.7 플레이어 정보를 DB에 저장하는 방법
-플레이어 데이터는 다양한 형태의 데이터 구조로 되어 있다. 대충 아래와 같다. <br/>
-TODO : 그림 필요 <br/>
-최상위에는 ID, 암호화된 비번, 실제 이름 같은 플레이어 자신의 정보가, 그 밑에는 플레이어가 가진 캐릭터가 하나 이상이 있고 <br/>
-플레이어 캐릭터는 캐릭터 이름, 종족, 레벨, 아이템 등등이 있을 것이다. <br/>
-플레이어 데이터는 구조체와 목록의 집합이라고 할 수 있다. <br/>
+플레이어 데이터는 다양한 형태의 데이터 구조로 되어 있다. <br/>
+TODO : 예제 <br/>
+플레이어 데이터는 구조체와 목록의 집합이라 할 수 있고 구조체형 데이터를 테이블에 저장하는 방법을 알아본다. <br/>
+구조체와 목록에 집합 형태로 되어 있는 데이터 덩어리는 트리 형태로 표현할 수 있다. <br/>
+## 이를 테이블에 넣기 위해서는? 
+### 1) 플레이어 데이터 전체를 문서 형태로 만들어서 테이블에 넣는다.
+플레이어 데이터를 문서 형태로 만들면 JSON 문서 형태로 나온다. JSON 문서는 트리 구조의 데이터를 문자열 형태로 표현하며 <br/>
+트리의 각 노드는 속성(이름과 값의 짝)을 여러 개 저장할 수 있다. 예로, 다음과 같다 <br/>
+```json
+{
+  "ID":"Hong Gil Dong",
+  "password":"wlknelhklkfhe",
+  "Characters": [
+    {
+      "ID":"My Little Elf",
+      "Level":35,
+      "Items": [
+        {
+          "Type":123,
+          "Amount":1
+        }
+      ]
+    },
+    "ID":"My Big Orc"
+    "Level":23,
+    "Items":[]
+  ]
+}
+```
+
+### 2) 플레이어 데이터를 구성하는 트리 노드 각각을 테이블에 넣는다.
+
+
+
 
 <hr/>
 
