--- a/게임서버프로그래밍교과서/07.DB 기초.md
+++ b/게임서버프로그래밍교과서/07.DB 기초.md
@@ -137,11 +137,70 @@ TODO : 예제 <br/>
   ]
 }
 ```
+플레이어 정보를 위의 JSON 형태로 하나로 만든 후 테이블에 저장한다. 플레이어ID와 JSON 텍스트 필드면 된다. <br/>
+<table>
+  <th>ID</th><th>문서</th>
+  <tr>
+    <td>Hong Gil Dong</td>
+    <td>
+      {"ID":"Hong Gil Dong", "password":"wlknelhklkfhe", "Characters": [{
+      "ID":"My Little Elf","Level":35,"Items": [{"Type":123,"Amount":1}]},
+      "ID":"My Big Orc""Level":23,"Items":[]]}
+    </td>
+  </tr>
+  <tr>
+    <td>Kang Bu Ja</td>
+    <td>....</td>
+  </tr>
+</table>
+JSON을 담을 필드를 varchar로 하는 것은 적합하지 않다. JSON 문자열이 얼마나 길어질지 모르기 때문에 문자열 제한이 없는 text 필드를 사용한다. <br/>
+JSON 대신 XML 형식을 사용해도 된다. XML도 JSON과 마찬가지로 트리 노드와 각 노드의 속성을 저장하는 것이 가능하다. <br/>
+둘 중에 본인이 편한것을, DB가 지원하는 것을 사용하면 되며 둘 다 없다면 text를 사용하면 된다. <br/>
 
 ### 2) 플레이어 데이터를 구성하는 트리 노드 각각을 테이블에 넣는다.
+앞의 1)번 방식으로 JSON이나 XML로 플레이어 정보를 저장하는 방식은 이해하기 쉽지만 원하는 조건 값을 찾는 등 실사용하기에는 쉽지 않다. <br/>
+그래서 2)번 방식, 플레이어 정보를 여러 테이블에 나눠 저장하는 방법을 써야한다. <br/>
+트리의 각 노드는 속성(이름, 값 짝)을 여러 개 가지고 있다. 따라서 각 노드는 레코드로 저장되어야 한다. <br/>
+
+
+#### 2-1) UserAccount 테이블 
+<table>
+  <th>ID</th><th>Password</th><th>ETC</th>
+  <tr>
+    <td>Hong Gil Dong</td><td>...</td><td>...</td>
+  </tr>
+  <tr>
+    <td>Kang Bu Ja</td><td>...</td><td>...</td>
+  </tr>
+</table>
+플레이어 각각에 대한 정보를 저장하는 테이블 <br/>
+이때 플레이어 ID는 서로 중복되지 않아야 한다. 따라서 ID 필드는 유니크 속성이 들어있는 인덱스로 설정하거나 기본키 설정을 해야 한다. <br/>
+
+#### 2-2) Character 테이블
+DB에 어떤 테이블을 넣어야 할지 계획을 잡을 때 자주 사용하는 방식은 외래 키(Foreign Key)를 사용하는 것이다. <br/>
+외래 키란 현재 테이블의 어떤 필드가 다른 테이블의 특정 필드를 가리키는 것을 의미한다. <br/>
+플레이어는 한 계정에 여러 개의 플레이어 캐릭터를 가지고 있고, 반대로 말하면 플레이어 캐릭터는 본인이 소유하는 플레이어가 있음을 의미한다. <br/>
+플레이어 캐릭터를 테이블에 저장할 때 플레이어 캐릭터의 고유 이름으로 ID 뿐만 아니라 "이 플레이어가 누구의 소유인가?"도 저장하면 어떨까? <br/>
+<table>
+  <th>ID</th><th>OwnerUserAccountID</th><th>ETC</th>
+  <tr>
+    <td>My Little Elf</td><td>Hong Gil Dong</td><td>...</td>
+  </tr>
+  <tr>
+    <td>My Big Orc</td><td>Hong Gil Dong</td><td>...</td>
+  </tr>
+</table>
+이렇게 하면 플레이어 Hong Gil Dong은 플레이어 캐릭터 MyLittleElf, MyBigOrc를 가진다고 표현할 수 있다. <br/>
+여기서 OwnerUserAccountID 필드는 플레이어 정보를 담은 UserAccount 테이블의 레코드를 가리켜야 한다. <br/>
+플레이어 테이블에서 고윳값이 보장되는 것은 현재 기본키인 ID 필드이며 OwnerUserAccountID 필드는 UserAccount의 ID 필드를 가리켜야 한다. <br/>
+이를 OwnerUserAccountID 필드는 UserAccount의 ID 필드를 가리키는 **외래 키**라고 한다.
+<br/><br/>
+외래키를 가지고 CRUD를 자주 한다. 따라서 외래 키에 대해 인덱스를 설정하는 것이 좋다. 다만 여기에서 외래 키는 중복을 허락해야 하므로
+논유니크 인덱스(nonunique index)로 설정해야 한다. 
 
 
 
+${\textsf{\color{green}하하하하하하하핳}}$
 
 <hr/>
 
