--- a/게임서버프로그래밍교과서/07.DB 기초.md
+++ b/게임서버프로그래밍교과서/07.DB 기초.md
@@ -193,7 +193,7 @@ DB에 어떤 테이블을 넣어야 할지 계획을 잡을 때 자주 사용하
 이렇게 하면 플레이어 Hong Gil Dong은 플레이어 캐릭터 MyLittleElf, MyBigOrc를 가진다고 표현할 수 있다. <br/>
 여기서 OwnerUserAccountID 필드는 플레이어 정보를 담은 UserAccount 테이블의 레코드를 가리켜야 한다. <br/>
 플레이어 테이블에서 고윳값이 보장되는 것은 현재 기본키인 ID 필드이며 OwnerUserAccountID 필드는 UserAccount의 ID 필드를 가리켜야 한다. <br/>
-이를 OwnerUserAccountID 필드는 UserAccount의 ID 필드를 가리키는 **외래 키** 라고 한다.
+이를 OwnerUserAccountID 필드는 UserAccount의 ID 필드를 가리키는 ___외래키___ 라고 한다.
 <br/><br/>
 외래키를 가지고 CRUD를 자주 한다. 따라서 외래 키에 대해 인덱스를 설정하는 것이 좋다. 다만 여기에서 외래 키는 중복을 허락해야 하므로
 논유니크 인덱스(nonunique index)로 설정해야 한다. 
