--- a/게임서버프로그래밍교과서/07.DB 기초.md
+++ b/게임서버프로그래밍교과서/07.DB 기초.md
@@ -219,14 +219,29 @@ Hong Gil dong과 그것이 소유한 My Little Elf, Big Orc라는 두 캐릭터,
 DB 구조를 표현할 때는 여러 사람이 쉽게 작업할 수 있도록 어떤 공인된 표현법이 있어야 한다. 보통 개체-관계 다이어그램(ER Diagram)이나 <br/>
 UML(Unified Modeling Language, 통합 모델링 언어)를 많이 사용한다. ER Diagram으로 위의 그림을 표현하면 아래와 같다. <br/>
 ![image](https://github.com/user-attachments/assets/fb668a9e-f300-46cb-b4c1-bd6c814cd6a8) <br/>
-ER Diagram에 대한 설명은 생략한다. 
+ER Diagram에 대한 설명 추가 필요 <br/>
 
 <hr/><br/><br/>
 
 # 7.9 질의 구문 실행
-테이블을 저으이했으니 여기에 플레이어 데이터를 읽고 써본다. <br/>
-DB에 질의 구문을 던지고 받는 과정의 지속 <br/>
+DB 설계를 했으니 DB를 사용(질의 구문 CRUD 실행)해본다. 그 전에 DB를 사용한다는 것은 DB에 질의 구문을 던지고 받는 행위를 계속한다는 것이고 <br/>
+DB에 질의 구문을 자주 던지는 것은 비효율적이라는 것을 알아야 한다. 그 이유는 아래와 같다. <br/>
+![image](https://github.com/user-attachments/assets/d08e5498-fbab-4575-addf-cc1875fc14b9) <br/>
+* 질의 구문 던지기 후 결과 받기 과정이 수행되는 동안 디바이스 타임(Device Time)이 발생한다.
+* 게임 서버와 DB 간 네트워크 레이턴시를 다 모으면 꽤 긴 시간이다.
+같은 결과를 내는 행위를 하는데 쿼리의 횟수를 조절할 수 있으면 쿼리 횟수를 줄이는 것이 좋다는 말 <br/>
 
+## 저장 프로시저
+DB는 질의 구문을 받으면 이를 처리할 수 있는 준비 작업 연산을 한다. DB 엔진이 받은 질의 구문을 분석 후 계획을 하는 것인데 문제는 <br/>
+이 짓을 쿼리를 받을 때 마다 한다는 것이고, 이를 "처음 한 번만 분석한 뒤 나머지는 그냥 쓰면 안되나" 하는 개념이 저장 프로시저이다. <br/>
+저장 프로시저는 실행 계획 준비 작업이 완료된 상태로 DB에 저장이 되고 이후 사용시에 분석은 패스한다. <br/>
+## 트랜잭션
+
+
+DB는 질의 구문을 받으면 이를 처리할 수 있는 준비 작업 연산을 한다. 데이터 베이스 엔진이 받은 질의 구문을 분석하고 무슨 일을 해야할 지 계획을 하는 것인데
+문제는 이 짓을 받을 때 마다 한다. 처음 한 번만 이 일을 하고 이후부터는 생략할 수 있으면 좋을 것이다. 
+이를 위한 것이 저장 프로시저이다.
+DB 측에 미리 질의 구문 집합을 저장해두는 것이다. 
 
 
 
