--- a/게임서버프로그래밍교과서/07.DB 기초.md
+++ b/게임서버프로그래밍교과서/07.DB 기초.md
@@ -79,8 +79,8 @@ CREATE, ALTER, DROP, TRUNCATE
 인덱스를 조회해야할 것이다. DB의 인덱스도 이러한 개념이며 아래는 인덱스의 장점(사용 이유)이다. <br/>
 ## 1) 빠른 검색
 인덱스는 필드 단위로 설정할 수 있으며 설정해 놓으면 특정 조건에서 빠른 속도로 원하는 레코드를 찾을 수 있다. <br/>
-그 효율은 사용 안함일 때 O(n), 사용할 때 O(log(n))의 차이로, 예를 들어 레코드가 1억 개라면 <br/>
-인덱스 사용 안함 = 1억 번, 인덱스 사용 = 12번 가량의 차이가 난다. <br/>
+그 효율은 사용 안함일 때 O(n), 사용할 때 O(log(n))의 차이로, 예를 들어 레코드가 1만 개라면 <br/>
+인덱스 사용 안함 = 1만 번, 인덱스 사용 = 12번 가량의 차이가 난다. <br/>
 ## 2) 중복 방지
 인덱스는 빠른 검색 용도 뿐만 아니라, 중복된 값을 방지하는 용도로도 사용된다. <br/>
 인덱스에는 유니크(unique)라는 속성을 추가로 지정할 수 있고 지정 시, 해당 필드는 중복이 불가능하게 된다. <br/>
