--- a/게임서버프로그래밍교과서/07.DB 기초.md
+++ b/게임서버프로그래밍교과서/07.DB 기초.md
@@ -347,7 +347,7 @@ void RequestExchangeItems(Player1, Player2, item1, item2) {
 그러나 이러한 일은 자주 발생하지 않는다. DB의 트랜잭션 기능은 주로 논리적 실패(Money가 음수가 된 경우 등) 때문에 롤백할 때 사용하는 것이 대부분이다.
 즉, "게임 서버 메모리에서 사전 검증을 다 해 버리는 특성" 덕분에 트랜잭션이 꼭 필요한 상황은 적다고 보면 된다.<br/><br/>
 
-#### 그러나 가능성이 0은 아니다.
+#### 그러나 문제가 생길 가능성이 0은 아니다.
 게임 서버에서 사전 검증을 마쳤다고 하더라도 중간에 크래시가 나는 위험성 등을 고려하지 않을 수 없다. 예를 들어 앞의 예시 코드 아래쪽에 있는 질의 구문을 실행하던 중 
 두 번째 db.execute()를 하기 직전에 게임 서버에서 크래시가 나면 어떻게 될까? DB에 값이 잘못 저장된 상태가 될 것이다. 이러한 경우라면 트랜잭션이 필요해 보인다. <br/><br/>
 
@@ -367,7 +367,7 @@ void RequestExchangeItems(Player1, Player2, item1, item2) {
 
 이러한 상황에서는 트랜잭션 사용으로 얻는 원자성 효과보다 교착 상태나 병렬성 하락으로 일어나는 손실이 더 크다고 한다. 이 글을 쓴 필자는
 게임 서버에서 플레이어의 데이터는 메모리에서 주력으로 일어나고 DB는 콜드 데이터를 다루므로 DB에서 원자성을 위해 공을 들이는 것이 이득보다
-손해가 조금 더 크다고 말하는 것.
+손해가 크다고 말하고 있다.
 
 <hr/><br/><br/>
 $\it{\large{\color{#DD6565}외래키}}$
