--- a/게임서버프로그래밍교과서/07.DB 기초.md
+++ b/게임서버프로그래밍교과서/07.DB 기초.md
@@ -370,6 +370,46 @@ void RequestExchangeItems(Player1, Player2, item1, item2) {
 손해가 크다고 말하고 있다.
 
 <hr/><br/><br/>
+
+# 7.11 보안을 위한 주의 사항
+DB는 해커가 노리는 주요 대상이다. 따라서 DB를 안전하게 보호하려는 노력이 필요하다. 게임 서버에서는 DB에 접속할 때 접속 가능한 계정으로만 접속하게 하는 것이 좋다.
+다음 두 가지를 기억하라 <br/>
+* DB의 모든 것을 다룰 수 있는 관리자 계정은 오직 관리자만 직접 다룰 수 있게 한다.
+* 게임 서버가 사용하는 계정은 게임 서버가 다루는 테이블 이외에는 건드리지 못하게 한다.
+
+또 DB는 게임 서버 이외의 다른 곳에서는 접속하지 못하게 네트워크를 격리할 필요가 있다. 사설 네트워크를 구축하거나 방화벽을 이용하여 게임 서버만 접속할 수 있는 것도 괜찮다.<br/><br/>
+
+게임 서버가 DB에 질의 구문을 던질 때, 질의 구문을 해커가 조작할 수 잇는 상황을 미리 고려해야 한다. 아래는 그 예제이다. <br/>
+```c++
+/*-------------------------------------------------------------------------
+  우리의 게임 서버에서 DB 작업을 하는 코드
+  userName에는 게임 사용자가 입력한 문자열이 서버에서 수신한 그대로 들어간다.
+-------------------------------------------------------------------------*/
+sprintf(queryString, "select * from t1 where a='%s'", userName);
+db.execute(queryString);
+
+/*-------------------------------------------------------------------------
+  위의 상황에서 게임 사용자가 해커고, 그 해커가 userName에 고의적으로 다음 내용을 보낸다면
+-------------------------------------------------------------------------*/
+'; delete from table1; select * from table1 where a='
+
+/*-------------------------------------------------------------------------
+  DB가 받는 완성된 쿼리는 아래와 같다.
+  table1의 모든 레코드가 삭제된다.
+-------------------------------------------------------------------------*/
+select * from t1 where a=''; delete from table1; select * from table1 where a=''
+```
+이러한 공격을 질의 구문 인젝션(Query Injection)이라고 한다. 이를 막으려면 애당초 sprint 같은 질의 구문을 사용자 입력 값으로 만들지 말아야 한다.
+공격을 막기 위한 용도도 있지만 프로그램을 오래 유지 보수하다 보면 생길 수 있는 관리적인 측면에서의 문제 상황도 방지해준다. 
+
+## 매개변수화된 질의 구문 (Parameterized Query)
+이를 방지하기 위해 웬만한 DB 연결 모듈은 매개변수화된 질의 구문(Parameterized Query) 실행 기능을 갖고 있다.
+매개변수화된 질의 구문이란 질의 구문 자체에는 우리가 만든 문장만 들어가게 하고, 질의 구문에 들어갈 수 있는 다른 입력 값들은 
+별도의 매개변수로 격리해서 입력하는 것을 의미한다. 앞에서 배운 저장 프로시저와 준비된 명령문(Prepared Statement)이 이에 해당한다. <br/><br/>
+
+## 해당 내용 마무리 필요
+
+<hr/><br/><br/>
 $\it{\large{\color{#DD6565}외래키}}$
 
 
