--- a/게임서버프로그래밍교과서/08.NoSql.md
+++ b/게임서버프로그래밍교과서/08.NoSql.md
@@ -1,1 +1,8 @@
 
+# 8.1 RDBMS와 NoSQL
+RDBMS(관계형 데이터베이스, Relational Database Management System)는 mssql, mysql 등 db라고 하면 떠오르는 db의 기본이라는 느낌이지만 
+RDBMS는 특정 상황에서 몇 가지 부족한 점이 있다. <br/><br/>
+
+한 예로, 한 테이블에 저장된 레코드들은 모두 같은 형태의 필드를 가져야 한다. 
+
+<hr/><br/><br/>
