--- a/게임서버프로그래밍교과서/08.NoSql.md
+++ b/게임서버프로그래밍교과서/08.NoSql.md
@@ -27,6 +27,17 @@ RDBMS에서 아쉬운 점을 예제로 알아보자 <br/>
 그 필드가 null을 갖고 있더라도 말이다. 이때 DB 엔진은 이 처리를 한다고 장시간 작동을 멈춘다. 하지만 게임 서비스가 계속 가용 되어야 하는 상황이라면
 이것은 문제가 된다. <br/>
 
-앞서 플레이어 정보를 DB에 저장할 때 외래 키를 사용했던 것을 생각
+앞서 플레이어 정보를 DB에 저장할 때 외래 키를 사용해서 플레이어 정보를 구성하는 데이터 트리를 여러 종류의 테이블에 나눠 저장할 수 있게 했다.
+유지 보수하면서 프로그램 구조가 복잡해지면서 테이블 구조도 계속해서 변경해야 하는데 이것이 힘들다. <br/>
+
+생각해보자
+앞서 플레이어 정보를 다큐먼트 형태로 만들어 한 필드에 다 뭉쳐 넣는 방법도 제시했는데 관계형 DB는 이 방법이 어울리지 않는다.
+관계형 데이터베이스의 레코드 1개는 논리적으로 볼 때 리스트나 배열 구조의 데이터이다. 이 레코드가 리스트나 배열이 아닌 트리나 구조체 형태를
+갖출 수 있다면 어떨까? NoSQL은 이게 가능하다.
+
+게임 서비스를 이용하는 유저가 많으면 게임 서버 한 대로는 이 사용량을 감당할 수 없어서 여러 머신을 사용하게 된다. 그렇게 되면 게임 서버에서
+DB로 액세스하는 양도 많아진다. 이 문제도 해결해야 한다. DB도 분산 처리를 해야 한다.
+
+
 
 <hr/><br/><br/>
