--- a/게임서버프로그래밍교과서/07.DB 기초.md
+++ b/게임서버프로그래밍교과서/07.DB 기초.md
@@ -107,15 +107,14 @@ DDL, DML 출처 : <br/>
 https://honeyjuny.tistory.com/entry/SQL%EC%9D%98-%ED%95%B5%EC%8B%AC-%EA%B0%9C%EB%85%90%EC%9D%B8-DML%EA%B3%BC-DDL%EC%9D%98-%EC%B0%A8%EC%9D%B4%EC%A0%90 <br/>
 <hr/><br/><br/>
 
-# 7.7 플레이어 정보를 DB에 저장하는 방법
-플레이어 데이터는 구조체와 목록의 집합이라 할 수 있다. 구조체형 데이터를 테이블에 저장하는 법을 알아본다. <br/>
-구조체와 목록의 집합 형태로 되어 있는 데이터 덩어리는 아래와 같이 트리 형태로 표현할 수 있다. <br/>
+# 7.7 DB 설계 (플레이어 정보를 DB에 저장하는 방법)
+플레이어 데이터는 구조체와 목록의 집합이라 할 수 있다. 구조체와 목록의 집합 형태로 되어 있는 데이터 덩어리는 아래와 같이 트리 형태로 표현할 수 있다. <br/>
 ![image](https://github.com/user-attachments/assets/af398886-490a-44d1-9f68-e4f60e74a7de) <br/>
-이를 DB에 저장하려면 2가지 방법이 있다. <br/>
+이를 DB에 저장하려면 2가지 방법이 있다.
 ## 1) 플레이어 데이터 전체를 문서 형태로 만들어서 테이블에 넣는다.
-플레이어 데이터를 문서 형태로 만들면 JSON 문서 형태로 나온다. JSON 문서는 트리 구조의 데이터를 문자열 형태로 표현하며 <br/>
+플레이어 데이터를 문서 형태로 만들면 JSON 문서 형태로 나온다. JSON 문서는 트리 구조의 데이터를 문자열 형태로 표현하며
 트리의 각 노드는 속성(이름과 값의 짝)을 여러 개 저장할 수 있다. <br/>
-쉽게 말해 데이터 구조를 JSON으로 표현하고 필드 하나에 저장한다는 것으로 아래와 같다. <br/>
+쉽게 말해 데이터 구조를 JSON으로 표현하고 필드 하나에 저장한다는 것으로 방법은 아래와 같다. <br/>
 ```json
 {
   "ID":"Hong Gil Dong",
@@ -137,7 +136,7 @@ https://honeyjuny.tistory.com/entry/SQL%EC%9D%98-%ED%95%B5%EC%8B%AC-%EA%B0%9C%EB
   ]
 }
 ```
-위처럼 JSON 형태로 구조를 표현한 후 DB에 저장한다. 플레이어ID와 JSON 텍스트 필드면 되면 된다. <br/>
+위처럼 JSON 형태로 구조를 표현한 후 한 줄로 만들어 DB에 저장한다. 플레이어ID와 JSON 텍스트 필드면 되면 된다. <br/>
 <table>
   <th>ID</th><th>문서</th>
   <tr>
@@ -153,14 +152,13 @@ https://honeyjuny.tistory.com/entry/SQL%EC%9D%98-%ED%95%B5%EC%8B%AC-%EA%B0%9C%EB
     <td>....</td>
   </tr>
 </table>
-JSON을 담을 필드를 varchar로 하는 것은 적합하지 않다. JSON 문자열이 얼마나 길어질지 모르기 때문에 문자열 제한이 없는 text 필드를 사용한다. <br/>
-JSON 대신 XML 형식을 사용해도 되며 둘 다 사용하기가 여의치 않다면 text를 사용하면 된다. <br/>
+JSON을 담을 필드는 문자열 계통 필드인데 varchar과 같은 길이가 정해져 있는 필드보다는 제한이 없는 text 필드를 사용한다.
+JSON 대신 XML을 사용해도 되며 둘 다 사용하기가 여의치 않으면 text를 사용한다. 
 
 ## 2) 플레이어 데이터를 구성하는 트리 노드 각각을 테이블에 넣는다.
-앞의 1)번 방식으로 JSON이나 XML로 플레이어 정보를 저장하는 방식은 이해하기 쉽지만 원하는 조건 값을 찾는 등 실사용하기에는 쉽지 않다. <br/>
-플레이어 정보를 여러 테이블에 나눠서 저장해보자 <br/>
-트리의 각 노드는 속성(이름과 값의 짝)을 여러 개 가지고 있다. 따라서 각 노드는 데이터베이스의 레코드로 저장되어야 한다. <br/>
-일단 만들면서 학습해보자. <br/>
+앞의 1)번 방식으로 JSON이나 XML로 플레이어 정보를 한 필드에 욱여 넣는 방식은 이해와 사용이 쉽지만 저장된 플레이어 정보에서 
+원하는 조건 값을 찾는 등 실사용하기에는 한계가 있을 수 있다. 그렇다면 플레이어 정보를 여러 테이블에 나눠 저장해야 한다.
+방법을 알아보자. 트리의 각 노드는 속성(이름과 값의 짝)을 여러 개 가지고 있다. 따라서 각 노드는 데이터베이스의 레코드로 저장되어야 한다.
 
 ### UserAccount 테이블 
 <table>
@@ -172,8 +170,8 @@ JSON 대신 XML 형식을 사용해도 되며 둘 다 사용하기가 여의치 
     <td>Kang Bu Ja</td><td>...</td><td>...</td>
   </tr>
 </table>
-플레이어 각각에 대한 정보를 저장하는 테이블 <br/>
-플레이어 ID는 중복되지 않아야 한다. 따라서 ID 필드에는 유니크 속성이 있는 인덱스를 쓰거나 기본키 설정을 해야 한다. <br/>
+플레이어 각각에 대한 정보를 저장하는 테이블로서 플레이어 ID는 중복되지 않아야 한다. <br/>
+따라서 ID 필드에는 유니크 속성이 있는 인덱스를 쓰거나 기본키 설정을 해야 한다. <br/>
 
 ### Character 테이블
 <table>
@@ -185,14 +183,12 @@ JSON 대신 XML 형식을 사용해도 되며 둘 다 사용하기가 여의치 
     <td>My Big Orc</td><td>Hong Gil Dong</td><td>...</td>
   </tr>
 </table>
-플레이어는 플레이어 캐릭터를 여러 개 가지고 있다. 반대로 말하면 플레이어 캐릭터는 각각 자기를 소유하고 있는 플레이어가 있음을 의미하며 <br/>
-DB에서는 이를 "관계"라하며 외래 키(Foreign Key)를 사용해서 표현한다. <br/>
-추가로 말하자면, 외래 키를 갖고 CRUD를 자주 하다고 한다. 따라서 외래 키에 대해 인덱스를 설정하는 것이 좋다. <br/>
-외래 키는 중복을 허용하므로 NonUnique Index로 설정해야 한다. <br/>
-
-##### 외래 키?
-현재 테이블의 어떤 필드가 다른 테이블의 특정 필드(기본키)를 참조하는 것을 의미 <br/>
-중복이 허용된다. <br/>
+플레이어가 소유하고 있는 플레이어 캐릭터를 나타내며 플레이어는 플레이어 캐릭터를 여러 개 가지고 있다. 
+반대로 말하면 플레이어 캐릭터는 각각 자기를 소유하고 있는 플레이어가 있음을 의미하며 
+DB에서는 이를 "관계"라하며 외래 키(Foreign Key)를 사용해서 표현한다. DB에 테이블을 설계할 때 이러한 "관계"를 생각해야 하고 관계는 
+외래 키(Foreign Key)를 사용하여 표현한다. 외래 키란 테이블의 어떤 필드가 다른 테이블의 특정 필드 값을 참조하는 것을 의미한다.
+또한, 외래 키를 가지고 CRUD를 자주 하기에 외래 키에 대해 인덱스 설정을 하는 것이 성능상 좋고 다만 외래 키는 중복을 허용해야 하기에 
+논유니크 인덱스(NonUnique Index)로 설정해야 한다.
 
 ### Item 테이블
 <table>
@@ -204,64 +200,63 @@ DB에서는 이를 "관계"라하며 외래 키(Foreign Key)를 사용해서 표
     <td>...</td><td>My Little Elf</td><td>...</td>
   </tr>
 </table>
-플레이어 캐릭터와 아이템 간 상관관계도 살펴본다. 플레이어 캐릭터는 아이템을 여러 개 가질 수 있어야 한다. <br/>
-역시 반대로 말하면 아이템은 자기를 소유하는 플레이어 캐릭터를 가리켜야 한다 <br/>
-OwnerCharacterID라는 필드를 추가하고 이 필드는 Character 테이블의 ID를 가리키는 외래 키가 되게 한다. <br/>
+플레이어 캐릭터가 소유하고 있는 아이템을 나타내는 테이블이며 플레이어 캐릭터는 아이템을 여러 개 가질 수 있어야 한다. 
+역시 반대로 말하면 아이템은 자기를 소유하는 플레이어 캐릭터를 가리켜야 한다.
+OwnerCharacterID라는 필드를 추가하고 Character 테이블의 ID를 참조하는 외래 키로 설정한다.
 
 ## 정리
-플레이어 데이터는 구조체와 목록의 집합으로 트리 형태로 표현할 수 있고 트리 형태로 표현한 것을 아래의 방법을 통해 DB에 저장할 수 있다. <br/>
+### DB 설계
+플레이어 데이터는 구조체와 목록의 집합으로 트리 형태로 표현할 수 있고 트리 형태로 표현한 것을 아래 내용을 통해 DB 설계한다.
 * 트리의 각 노드는 테이블의 레코드가 된다.
 * 각 노드의 소유자, 즉 부모 노드는 외래 키가 된다.
-이 방법으로 DB를 만들면 아래와 같은 형태로 나온다. <br/>
+이 방법으로 DB 테이블을 설계하면 아래와 같은 형태로 나온다. <br/>
 ![image](https://github.com/user-attachments/assets/a212b53d-26b3-44bb-83da-40f80b404e86) <br/>
 Hong Gil dong과 그것이 소유한 My Little Elf, Big Orc라는 두 캐릭터, My Little Elf가 갖고 있는 아이템 1, 아이템 2를 표현하고 있다 <br/>
 
-DB 구조를 표현할 때는 여러 사람이 쉽게 작업할 수 있도록 어떤 공인된 표현법이 있어야 한다. 보통 개체-관계 다이어그램(ER Diagram)이나 <br/>
-UML(Unified Modeling Language, 통합 모델링 언어)를 많이 사용한다. ER Diagram으로 위의 그림을 표현하면 아래와 같다. <br/>
+### 설계된 DB 구조 표현
+이러한 DB 구조를 여러 사람이 이해할 수 있는 공인된 표현법이 있어야 한다. 보통 ER Diagram(개체-관계 다이어그램)이나 
+UML(Unified Modeling Language, 통합 모델링 언어)를 많이 사용하고 ER Diagram으로 위의 그림을 표현하면 아래와 같다.
 ![image](https://github.com/user-attachments/assets/fb668a9e-f300-46cb-b4c1-bd6c814cd6a8) <br/>
-ER Diagram에 대한 설명 추가 필요 <br/>
+ER Diagram에 대한 양식은 여기서는 생략
 
 <hr/><br/><br/>
 
 # 7.9 질의 구문 실행
-DB 설계를 했으니 DB를 사용(질의 구문 CRUD 실행)해본다. DB를 효율적으로 사용하는 방법들을 개념들과 함께 알아본다. <br/>
-DB를 사용한다는 것은 DB에 질의 구문을 던지고 받는 행위를 계속한다는 것이고 DB에 질의 구문을 자주 던지는 것은 비효율적이라는 것을 알아야 한다. 그 이유는 아래와 같다. <br/>
+앞 파트에서 DB 설계를 했으니 여기서는 DB를 사용하는 방법과 필요한 지식들이 나오는데 사용하는 방법(기본 CRUD)은 패스한다.
+DB를 사용한다는 것은 DB에 질의 구문을 던지고 받는 행위를 계속한다는 것이고 DB에 질의 구문을 자주 던지는 것은 
+비효율적이라는 것을 알아야 한다. 그 이유는 아래와 같다.
 ![image](https://github.com/user-attachments/assets/d08e5498-fbab-4575-addf-cc1875fc14b9) <br/>
-* 질의 구문 던지기 후 결과 받기 과정이 수행되는 동안 디바이스 타임(Device Time)이 발생한다.
+* 질의 구문을 던지고 결과를 받기 위해 기다리는 디바이스 타임(Device Time)이 발생한다.
 * 게임 서버와 DB 간 네트워크 레이턴시를 다 모으면 꽤 긴 시간이다.
-  
-같은 결과를 내는 행위를 하는데 쿼리의 횟수를 조절할 수 있으면 쿼리 횟수를 줄이는 것이 좋다는 말 <br/>
+
+쿼리를 할 때 마다 위의 시간 낭비가 생길 수 밖에 없으므로 같은 값에 쿼리를 하는 행위를 줄일 수 있으면 줄이는 것이 좋다. 
 
 ## 저장 프로시저
-DB는 질의 구문을 받으면 이를 처리할 수 있는 준비 작업 연산을 한다. DB 엔진이 받은 질의 구문을 분석 후 계획을 하는 것인데 문제는 <br/>
-이 짓을 쿼리를 받을 때 마다 한다는 것이고, 이를 "처음 한 번만 분석한 뒤 나머지는 그냥 쓰면 안되나" 하는 개념이 저장 프로시저이다. <br/>
-저장 프로시저는 실행 계획 준비 작업이 완료된 상태로 DB에 저장이 되고 이후 사용시에 분석은 패스한다. <br/>
+DB 엔진은 질의 구문을 받으면 질의 구문을 분석, 계획한 뒤 실행을 한다. 문제는 이 행위를 쿼리를 받을 때 마다 하기에 이 부분이 성능 저하를 일으킨다.
+그래서 이를 "처음 한 번만 분석한 뒤 나머지는 그냥 쓰면 안되나"하는 부분을 해결해 주는 것이 저장 프로시저이다.
+저장 프로시저는 처음에 DB에 쿼리를 저장하고 저장할 때 분석과 계획을 완료하고 이후 사용에 대해 분석 및 계획 없이 실행만 한다.
+
 ## 트랜잭션
-트랜잭션을 설명할 때 자주 나오는 예로 은행의 계좌 이체 프로그램을 만든다고 가정해보자. <br/>
-Hong Gil Dong이 Kang Bu Ja에게 100원을 이체하려면 다음 처리를 해야 한다. <br>
+트랜잭션을 설명할 때 자주 나오는 예로 은행 계좌 이체 프로그램을 많이 든다. 아래는 Hong Gil Dong이 Kang Bu Ja에게 100원을 이체하려는 상황이다.
 ```sql
 update UserAccount set Money = Money + 100 where ID='Kang Bu Ja'
 update UserAccount set Money = Money - 100 where ID='Hong Gil Dong'
 ```
-프로그래머의 실수 또는 시스템 결함으로 이 구문 중 하나만 실행된다면 끔찍한 일이 될 것이다. <br/>
-이 예제는 단순하기에 실수를 일으킬 만한 것이 별로 없어 보이지만, 프로그램이 오랫 동안 유지 보수되고 시스템이 복잡해지면 이러한 일이 발생할 가능성이 높아진다. <br/>
-DB에서 이러한 상황을 막을 수 있는 멋진 방어 기제가 있다. 지금 설명하는 "트랜잭션"이다. <br/>
-트랜잭션의 기본 개념은 구문이 "모두 실행되던지, 하나도 실행되지 않던지" 둘 중 하나의 결과만 보장되게 하는 것이다. <br/>
+위의 상황에서 프로그래머의 실수 또는 시스템 결함으로 위의 구문에서 하나만 실행된다면 문제가 크다. DB에서 이러한 상황을 막을 수 있는 방어기제가 있다.
+그것이 지금 설명하는 트랜잭션이다. 트랜잭션은 "구문이 모두 실행되던지, 아예 하나도 실행되지 않던지" 이 둘 중 하나의 결과를 보장한다.
 ```sql
 begin transaction
 update UserAccount set Money=Money+100 where ID='Kang Bu Ja'
 update UserAcocunt set Money=Money-100 where ID='Hong Gil Dong'
 commit
 ```
-트랜잭션의 흐름은 다음과 같다. begin transaction으로 트랜잭션 구간이 시작되며 위의 update 2구문을 실행한 후 커밋으로 확정을 낸다. <br/>
-만약 구문을 실행하는 중 문제가 생기면 commit 대신 rollback을 실행하여 결과를 모두 되돌린다. <br/>
+DB 종류에 따라 사용법이 다르기에 위에서 기본 흐름만 본다. begin transaction으로 트랜잭션 구간이 시작되며 구간 내의 구문을 실행하고
+결과가 만족스러우면 commit, 그렇지 않으면 rollback을 한다.
 
-### 트랜잭션은 뮤텍스와 비슷
-상황을 통해 조금 더 자세히 알아보도록 하자. <br/>
-게임 서버 1, 2가 있는데 게임 서버 1에서 begin transaction 후 두 update 구문을 실행한다. <br/>
-그 후 게임 서버 2에서  같이 게임 서버 1이 액세스한 레코드를 읽는다. <br/>
-그런데 게임 서버 1에서 rollback 구문을 실행해 버리면 어떻게 될까? <br/>
-이를 테스트하는 방법이 있다. db 세션을 하나 더 추가하여 테스트하면 된다. <br/>
+### 트랜잭션 = DB의 뮤텍스
+트랜잭션은 게임 서버의 뮤텍스와 비슷하다. db에 질의 구문을 하는 주체를 db세션이라고 한다. 이 db세션이 2개 이상이라고 해보자.
+db세션1이 트랜잭션을 걸고 액세스하고 있을 때 db세션2가 해당 레코드에 액세스하면 어떻게 될까?
+그리고 db세션1이 데이터를 변경하다가 rollback 해버리면 어떻게 될까? 이를 실험하는 방법은 아래와 같다.
 ```sql
 // DB Session 1
 begin transaction
@@ -271,103 +266,69 @@ update UserAccount set Money=Money-100 .....
 // DB Session 2
 select Money from UserAccount where ID='Kang Bu Ja'
 ```
-테스트는 위의 코드에서 DB Session1 코드를 실행한 후 DB Session2에서 코드를 실행하면 되며 아래는 그에 대한 설명이다. <br/>
-세션1에서 트랜잭션을 걸고 시작하기는 했지만 아직 트랜잭션을 커밋하거나 롤백하지 않았고 이후 세션2에서 구문을 실행하면 <br/>
-실행 결과가 나오지 않고 무한 대기 상태가 될 것이다. Money의 값이 무엇이 될 지 최종 판단을 할 수 없기 때문이다. <br/>
-첫 번째 질의 구문 창에서 트랜잭션이 실행 중에 있고 이것이 커밋되느냐 롤백되느냐에 따라 결정된다. <br/>
-이제 첫 번째 질의 구문 창에서 다음을 실행해 본다. <br/>
-```sql
-commit 혹은 rollback
-```
-이제서야 두 번째 질의 구문 창에서 무한 대기 상태가 끝나고 결과가 나올 것이다. 여기서 우리가 알 수 있는 것은 다음과 같다. <br/>
+db세션1에서 begin transaction 후 두 update 구문을 실행한다. 이후 db세션2에서 select 구문을 실행하면 실행결과가 나오지 않고 무한 대기 상태가 된다.
+db세션2에서 접근하려는 데이터가 다른 세션(db세션1)에서 트랜잭션(락)을 걸고 점유하고 있어서 접근할 수 없기 때문이며 현재 트랜잭션을 걸고 있는
+db세션1에서 commit이나 rollback을 하고 트랜잭션을 끝내야 db세션2에서 액세스할 수 있다. 이 기다리는 시간이 길면 timeout이 발생한다.
 * 트랜잭션을 걸고 액세스하는 레코드는 멀티스레드 프로그래밍에서 뮤텍스를 잠금한 것과 비슷하다
 * 트랜잭션을 걸고 액세스하는 레코드는 다른 질의 구문 세션에서 액세스하면 앞선 트랜잭션이 완료되거나 취소될 때 까지 블로킹이 걸린다.
 
 ### 데드락
-뮤텍스를 사용할 때는 데드락을 조심해야 하고 DB 트랜잭션에서도 데드락을 주의해야 한다. 이것도 예를 통해 알아본다 <br/>
+뮤텍스를 사용할 때는 데드락을 조심해야 하고 DB 트랜잭션에서도 마찬가지다.
 레코드 A, B가 있을 때 db세션1에서는 레코드 A->B 순으로 접근하는데 A에 락을 걸고 B에 락을 건다. db세션2에서는 레코드 B->A 순으로 접근하는데
-B에 락을 걸고 A에 락을 건다. 이 두 질의 구문이 동시에 실행되며 아래와 같은 상황이 발생되면 어떻게 될까? <br/>
+B에 락을 걸고 A에 락을 건다. 이 두 질의 구문이 동시에 실행되면 어떻게 될까? 아래는 이것을 도식화한 것이다.
 1. db세션1 : 레코드 A 락 
 2. db세션2 : 레코드 B 락 
 3. db세션1 : 레코드 B -> 대기 발생 
 4. db세션2 : 레코드 A -> 대기 발생 
 
 안타깝게도 데드락이 발생한다. 멀티스레드 프로그래밍과 차이점이 있다면 두 질의 구문 프로세스 중 하나는 몇 분간 대기하다가 오류를 출력한다는 것이다 <br/>
-이때 우리가 할 일은 다음과 같다. <br/>
-```
-두 질의 구문은 반드시 레코드 A->B 순서로 액세스 한다.
-```
-그러나 이것이 말처럼 쉽지는 않다. 트랜잭션을 사용한다는 자체가 우리가 의도하는 프로그래밍이 웬만큼 복잡한 처리를 해야 한다는 의미이다.
-레코드 A, B를 액세스할 때 프라이머리 키 순서대로 액세스하면 이론적으로는 교착 상태가 생기지 않지만, 질의 구문을 다루다 보면 사실 그럴 여력이 없다
+그러면 질의 구문을 할 때 레코드 접근 순서를 A->B 순서로 갈 수 있게한다면? 레코드 A, B를 액세스할 때 프라이머리 키 순서대로 액세스하면 이론적으로는 교착 
+상태가 생기지 않지만 질의 구문을 다루다 보면 사실 그럴 여력이 없다. 트랜잭션을 사용한다는 것 자체가 웬만큼 복잡한 처리를 한다는 의미이기 때문이다.
+
+### 성능 하락
+트랜잭션이 관여되는 레코드는 다른 질의 구문 프로세스에서 액세스할 경우 블로킹을 일으켜 병렬 처리 효율성이 떨어진다. 여기서 잠금되는 영역은 관련 레코드만 잠금되는 것이 아니라
+그 레코드 주변에 있는 다른 레코드 및 해당 레코드가 있는 테이블 전체가 잠금되기도 한다. <br/>
+
 따라서 DB 트랜잭션을 걸 때는 꼭 필요한 최소한의 구간에서만 하는 것이 좋다. 트랜잭션의 영향을 받는 레코드의 개수를 최소한으로, 트랜잭션을 시작부터 끝날 때 까지
-데이터를 액세스하는 횟수 역시 최소로 하는 것이다. <br/><br/>
+데이터를 액세스하는 횟수 역시 최소로 하는 것이다.
 
-그리고 교착 상태로 질의 구문 실행이 매우 오랫동안 블로킹되거나 실패를 출력할 때도 반드시 별도로 처리해 주어야 한다. 데드락으로 수십초 블로킹을 하면 타임아웃 오류가 발생하는데
-예를 들어 질의 구문을 실행한 곳에서 타임아웃 오류가 발생했을 때 질의 구문을 다시 실행한다든지 하는 방법으로 오류를 핸들링 처리하면 된다.<br/><br/>
+### 그래서 트랜잭션을 쓰나 마나?
 
-트랜잭션이 관여되는 레코드는 다른 질의 구문 프로세스에서 액세스할 경우 블로킹을 일으켜 병렬 처리 효율성이 떨어진다. 불행하게도 트랜잭션 관련 레코드만 잠금되는 것이 아니라
-그 레코드 주변에 있는 다른 레코드 및 해당 레코드가 있는 테이블 전체가 잠금되기도 한다. 따라서 우리가 예상하는 것보다 더 넓은 범위가 잠금되기도 한다. <br/><br/>
-
-실시간 멀티플레이 온라인 게임에서 플레이어 정보는 자주 변경된다. 몬스터 하나를 잡을 때마다 변경되어야 할 테니까. 이러한 상황에서 트랜잭션은 심각한 문제를 일으킬 수 있다.
-그러나 너무 걱정할 필요는 없다. 게임 서버는 플레이어 정보를 메모리에 보관하고, 플레이어의 데이터를 게임 서버 안에 있는 메모리에서 변경하며, 변경된 내용을 DB에 저장한다.
-즉, DB를 세이브 데이터처럼 사용하는 셈이다. 게임 서버 안 메모리가 연산의 주요 대상이므로 두 플레이어 간 아이템 거래 같은 중요한 처리도 게임 서버 안 메모리에서 모두 판정이
-끝난 후 뒤늦게 DB에 기록된다. 이 경우 앞서 본 트랜잭션 예처럼 DB에 변경을 가하다가 "뭔가 잘못되었으니 롤백하자" 라고 할 필요가 없다.
 ```c++
 // 게임 서버 메모리와 DB에서 두 플레이어 간 아이템 교환
-void RequestExchangeItems(Player1, Player2, item1, item2) {
-  // 각 플레이어는 아이템을 맞게 갖고 있는가?
-  if (player1.hasItem(item1) == false) {
-    // 실패를 클라이언트에게 알리고 취소
-    ResponseExchangeItemsFail(...);
+void RequestExchangeItem(player1, player2, item1, item2) {
+  // 예외 처리 (플레이어가 아이템을 가지고 있는지 확인)
+  if (player1.hasItem(item1) == false || player2.hasItem(item2) == false)
     return;
-  }
-  if (player2.hasItem(item2) == false) {
-    // 실패를 클라이언트에게 알리고 취소
-    ResponseExchangeItemsFail(...);
-    return;
-  }
 
-  // 서버 메모리에서 데이터 변경
+  // 서버 메모리에서 아이템 교환
   player1.removeItem(item1);
-  player2.removeItem(item2);
+  player2.removeItem(item1);
   player1.addItem(item2);
   player2.addItem(item1);
 
-  // DB에서 변경, DB에서는 제거 & 추가가 아니라 그냥 소유자만 변경
-  // 게임 서버 메모리에서 이미 검증을 마쳤으므로 트랜잭션까지 할 필요는 없다.
-  db.execute("update Item set owner={player2} where itemID={item1}");
-  db.execute("update Item set owner={player1} where itemID={item2}");
+  // DB에서 아이템 교환
+  db.execute("update item set owner={player2} where itemid={item1};");
+  db.execute("update item set owner={player1} where itemid={item2}");
 }
 ```
-그래서 게임 서버를 만들다 보면 DB 트랜잭션이 그렇게까지 필요하지는 않다. 
+게임 서버에서는 서버 메모리에서 먼저 검증을 한 후 DB에 액세스하기 때문에 트랜잭션이 그렇게까지 필요하진 않다. 
+DB의 트랜잭션 기능은 주로 논리적 실패(Money가 음수가 된 경우 등) 때문에 롤백할 때 사용하는 것이 대부분이다.
+(개인적으로는 시스템 등의 문제가 안 생기는 거라고 해석했다.) <br/>
 
-### 트랜잭션 고찰
-#### 트랜잭션이 그렇게 까지 필요하진 않다.
-게임 서버가 DB에 있는 레코드 2개 이상에 플레이어 데이터를 저장하다 어떤 오류가 발생해서 둘 중 하나를 저장하지 못 했다면 일관성이 깨질 것이다.
-그러나 이러한 일은 자주 발생하지 않는다. DB의 트랜잭션 기능은 주로 논리적 실패(Money가 음수가 된 경우 등) 때문에 롤백할 때 사용하는 것이 대부분이다.
-즉, "게임 서버 메모리에서 사전 검증을 다 해 버리는 특성" 덕분에 트랜잭션이 꼭 필요한 상황은 적다고 보면 된다.<br/><br/>
+그러나 게임 서버에서 사전 검증을 마쳤다고 하더라도, 문제가 생길 가능성이 적다고 하더라도 그것이 아예 확률 0이 아니기에
+위험성을 생각하지 않을 수가 없다. 결국은 트랜잭션이 필요해 보인다. 그러나 트랜잭션의 사용으로 인한 성능 저하와 데드락 가능성은 
+큰 문제다. 이와 같이 트랜잭션을 사용하기 어려운데 데이터의 일관성을 보장할 수 있는 방법은 없는가 <br/>
 
-#### 그러나 문제가 생길 가능성이 0은 아니다.
-게임 서버에서 사전 검증을 마쳤다고 하더라도 중간에 크래시가 나는 위험성 등을 고려하지 않을 수 없다. 예를 들어 앞의 예시 코드 아래쪽에 있는 질의 구문을 실행하던 중 
-두 번째 db.execute()를 하기 직전에 게임 서버에서 크래시가 나면 어떻게 될까? DB에 값이 잘못 저장된 상태가 될 것이다. 이러한 경우라면 트랜잭션이 필요해 보인다. <br/><br/>
+여러 가지 방법이 있다. 일단 어딘가에 로그를 남겨 놓고 두 플레이어의 레코드를 업데이트 한다. 그 후 업데이트 완료되면 해당 로그를 지워버리는 것.
+또 다른 방법으로는 트랜잭션에서 발생하는 잠금 수준을 완화하는 것이다. 트랜잭션의 잠금 수준을 "현재 트랜잭션을 걸고 접근하고 있는 데이터에 대해 다른 곳에서도
+읽을 수 있게 허락한다"라고 변경하는 것이다. 그러나 이렇게 하면 DB의 ACID 특징을 다소 위반하게 된다. <br/>
 
-#### 그래서 사용하자니 확실한 성능 저하가 발생한다.
-그러나 트랜잭션으로 발생하는 성능 저하와 데드락 가능성을 완전히 없애고 싶을 수도 있다. 이렇게 레코드를 2개 이상 기록하되 전부 아니면 전무하게 기록하는 동시에
-트랜잭션을 사용하기 어려운 상황이라면 어떻게 해야 할까? <br/><br/>
+* 게임 서버가 플레이어 정보를 메모리에 항상 보관한다.
+* 플레이어 처리의 주체는 게임 서버 메모리 안에서 이루어진다.
+* 데이터베이스는 세이브 데이터 역할 정도만 한다.
 
-#### 여러 가지 추가 옵션을 생각할 수도 있다.
-여러 가지 방법이 있다. 일단 어딘가에 로그를 남겨 두고 두 플레이어의 레코드를 업데이트 하는 것이다. 그리고 두 레코드의 업데이트가 완료되면 해당 로그를 지워 버리는 것이다.
-또 다른 방법으로는 트랜잭션에서 잠금 수준을 완화하는 것이다. "다른 곳에서도 읽기 하는 것을 허락한다"라는 것으로 이렇게 하면 DB의 ACID 특징을 다소 위반하게 된다.
-물론 그 대신 데드락이 매우 적거나 없어지는 효과를 볼 수 있으니 일장일단의 선택인 셈이다.
-
-#### 결국은 한 쪽 입장을 선택해야 한다.
-* 게임 서버가 플레이어 정보를 메모리에 항상 보관하고 있다.
-* 플레이 처리의 주체는 게임 서버 내부의 메모리 안에서 이루어진다.
-* DB는 세이브 데이터 역할 정도만 한다.
-
-이러한 상황에서는 트랜잭션 사용으로 얻는 원자성 효과보다 교착 상태나 병렬성 하락으로 일어나는 손실이 더 크다고 한다. 이 글을 쓴 필자는
-게임 서버에서 플레이어의 데이터는 메모리에서 주력으로 일어나고 DB는 콜드 데이터를 다루므로 DB에서 원자성을 위해 공을 들이는 것이 이득보다
-손해가 크다고 말하고 있다.
+필자는 위와 같은 상황에서 트랜잭션 사용으로 얻는 원자성 효과보다 교착 상태나 병렬성 하락으로 일어나는 손실이 더 크다고 한다.
 
 <hr/><br/><br/>
 
