--- a/게임서버프로그래밍교과서/08.NoSql.md
+++ b/게임서버프로그래밍교과서/08.NoSql.md
@@ -1,43 +1,32 @@
 
 # 8.1 RDBMS와 NoSQL
-앞서 07에서 알아본 DB는 관계형 데이터베이스(RDBMS)라고 한다. RDBMS는 테이블과 외래 키 등을 사용하고 다양한 종류의 질의 구문으로 원하는 정보를 
-다각적으로 빠르게 추출할 수 있다. 또 RDBMS는 데이터 일관성을 중요하게 생각한다. <br/>
+앞서 알아본 DB는 관계형 데이터베이스(RDBMS)라고 한다. RDBMS는 테이블과 외래 키 등을 사용하고 다양한 종류의 질의 구문으로 원하는 정보를 다각적으로
+빠르게 추출할 수 있다. 또 RDBMS는 데이터의 일관성을 중요하게 생각한다. NoSQL은 RDBMS의 이런 특성들을 포기하는 대신 다른 측면의 장점을 가질 수 있는
+DB이다. <br/>
 
-DB는 RDBMS만 있는 것이 아니다. NoSQL 유형의 DB도 있으며 NoSQL은 RDBMS에서 전통적으로 중시하던 몇 가지를 포기하는 대신 다른 측면의 장점을 보인다.
-RDBMS에서 아쉬운 점을 예제로 알아보자 <br/>
-
-예제) 한 테이블에 저장된 레코드들은 모두 같은 형태의 필드를 가져야 한다. <br/>
-플레이어가 아이템을 구매한 로그를 저장한다고 해보자. 테이블을 다음과 같이 정의했다.
+RDBMS를 사용하며 아쉬워지는 상황을 예제로 살펴보며 NoSQL의 이점을 알아보자. <br/>
+한 테이블에 저장된 레코드들은 모두 같은 형태의 필드를 가져야 한다. 플레이어가 아이템을 구매한 로그를 담는 테이블을 생각해보자.
+테이블 정의는 아래와 같다.
 * 획득한 시간
-* 플레이어 ID
+* 플레이어ID
 * 획득한 아이템 종류
 
-현재 데이터 레코드가 약 1억 개 쌓여 있고 게임을 유지 보수하다 보니 여기에 다음 필드를 추가해야 하는 상황이 되었다.
+이러한 형태로 현재 DB 테이블에 레코드가 약 1억 개 쌓여있다. 그런데 게임을 유지 보수하다 보니 여기에 다음 필드를 추가해야 하는 상황이 되었다.
 * 구매 개수
 
-구매 개수라는 필드를 추가하면 기존에 쌓여 있던 레코드 1억 개에도 "구매 개수"라는 필드를 반드시 추가해야 한다. 한 테이블의 모든 레코드는 
-필드 구성이 모두 같아야 하기 때문이다. 필드는 null 값을 가질 수 있기 때문에 기존 레코드에는 새로 추가된 필드 값이 모두 null이 되게 함으로써
-문제를 간단히 해결할 수 있다. <br/>
+구매 개수라는 필드를 추가하면 기존에 쌓여 있던 레코드 1억 개에도 구매 개수라는 필드를 반드시 추가해야 한다. 한 테이블의 모든 레코드는 필드 구성이
+모두 같아야 하기 때문이다. 필드는 null 값을 가질 수 있기에 기존 레코드에는 새로 추가된 필드 값이 모두 null로 처리할 수 있다. <br/>
 
-그러나 계속 유지 보수하다 보니, 플레이어 ID 대신 플레이어의 email 주소를 저장해야 하는 상황이 되었고 뿐만 아니라 아이템 종류만 로그로 남겼는데 
-아이템의 이름까지 추가해줘야 하는 상황이 되었다. 이렇게 되면 점점 로그 테이블 구조는 복잡하고 괴상해진다. <br/>
+그런데 다시 게임을 유지 보수하다 보니 플레이어ID 대신 플레이어의 email 주소를 저장해야 하고 지금까지는 아이템 종류만 로그로 남겼는데 이제 아이템
+이름까지 문자열 형태로 남겨야 하는 상황이 되었다. 이렇게 되면 점점 테이블의 구조는 복잡해지고 괴상해진다. 기존 테이블의 필드 구조를 바꾸는 것은 
+우리 인간에게도 힘들지만 DB 입장에서도 많은 양의 처리를 단시간에 해야 하는 어려운 일이다. 위의 상황에서 필드 하나를 추가하면 DB 엔진은 기존에 있는
+레코드 1억 개 전체에 필드를 추가해야 한다. 그 필드가 null을 갖고 있더라도 말이다. 이때 DB 엔진은 장시간 가동을 멈춘다. 하지만 게임 서비스가 계속
+가용되어야 하는 상황이라면 이것은 문제가 된다. 또 프로그램 구조가 복잡해질수록 테이블 구조도 변경해야 한다. 유지 보수하면서 점점 힘들어진다. <br/>
 
-기존 테이블의 필드 구조를 바꾸는 것은 우리에게도 힘들지만 DB 입장에서도 많은 양의 처리를 단시간에 해야 하는 어려운 일이다.
-예를 들어 기존 테이블에 레코드 1억 개가 있다고 할 때 필드 하나를 추가하면 DB 엔진은 기존에 있는 레코드 1억 개 전체에 필드를 추가해야 한다.
-그 필드가 null을 갖고 있더라도 말이다. 이때 DB 엔진은 이 처리를 한다고 장시간 작동을 멈춘다. 하지만 게임 서비스가 계속 가용 되어야 하는 상황이라면
-이것은 문제가 된다. <br/>
-
-앞서 플레이어 정보를 DB에 저장할 때 외래 키를 사용해서 플레이어 정보를 구성하는 데이터 트리를 여러 종류의 테이블에 나눠 저장할 수 있게 했다.
-유지 보수하면서 프로그램 구조가 복잡해지면서 테이블 구조도 계속해서 변경해야 하는데 이것이 힘들다. <br/>
-
-생각해보자
-앞서 플레이어 정보를 다큐먼트 형태로 만들어 한 필드에 다 뭉쳐 넣는 방법도 제시했는데 관계형 DB는 이 방법이 어울리지 않는다.
-관계형 데이터베이스의 레코드 1개는 논리적으로 볼 때 리스트나 배열 구조의 데이터이다. 이 레코드가 리스트나 배열이 아닌 트리나 구조체 형태를
-갖출 수 있다면 어떨까? NoSQL은 이게 가능하다.
-
-게임 서비스를 이용하는 유저가 많으면 게임 서버 한 대로는 이 사용량을 감당할 수 없어서 여러 머신을 사용하게 된다. 그렇게 되면 게임 서버에서
-DB로 액세스하는 양도 많아진다. 이 문제도 해결해야 한다. DB도 분산 처리를 해야 한다.
-
-
+앞에서 플레이어 데이터 트리 전체를 JSON 문서 형태로 만든 후 이를 테이블 필드 하나에 모두 저장하는 방법도 보여줬었는데 관계형 DB에서 이렇게 사용하는 것은
+일반적인 사용법이 아니다. RDBMS에서 레코드 1개는 논리적으로 볼 때 리스트나 배열 구조의 데이터이다. 이 레코드가 리스트나 배열이 아닌 트리나 구조체 형태를 갖출
+수 있다면 어떨까? NoSQL은 이를 보여준다.
 
 <hr/><br/><br/>
+
+# 
