--- a/게임서버프로그래밍교과서/08.NoSql.md
+++ b/게임서버프로그래밍교과서/08.NoSql.md
@@ -29,4 +29,38 @@ RDBMS를 사용하며 아쉬워지는 상황을 예제로 살펴보며 NoSQL의 
 
 <hr/><br/><br/>
 
-# 
+# 일단 패스
+
+<hr/><br/><br/>
+
+# 몽고DB (MongoDB)
+NoSQL DB 소프트웨어 종류는 여러가지가 있는데 그 중에서 몽고DB로 알아본다. 몽고DB는 JSON을 사용하기 때문에 JSON에 대해서 알고 있어야 하며 여기서 설명은
+생략한다. 몽고DB에서 다루는 데이터의 집합 관계는 RDBMS의 집합 관계와 비슷하지만 몇 가지 차이가 있다.
+* RDBMS에서 DB 인스턴스라고 부르는 것은 몽고DB에서도 똑같이 부른다.
+* RDBMS의 DB 인스턴스 안에는 테이블이 있다. 몽고DB의 DB 인스턴스 안에는 컬렉션(Collection)이 있다.
+* RDBMS의 테이블 안에는 레코드가 있다. 몽고DB에서는 컬렉션 안에 레코드 대신 다큐먼트(Document)가 들어간다.
+
+이 다큐먼트에는 데이터 트리를 저장한다. 추가적으로 몽고DB도 Robo 3T라고 하는 GUI 도구가 있다.
+
+<hr/><br/><br/>
+
+단일 서버를 구현하려면 결국 DB가 병목 지점이 된다. -> DB를 분산할 수 밖에 없다. 
+유저 단위로 DB를 수평분할하면 성능과 용량 문제는 해결되지만
+유저간 거래가 있는 게임의 DB를 수평분할하려면 여러 유저에 걸치는 트랜잭션을 구현해야 한다.
+RDBMS와 Redis를 가지고 분산 DB 트랜잭션을 구현했는지 설명한다.
+
+분산 트랜잭션 (=xa 트랜잭션)
+
+
+
+이거를 배현직이랑 엮어 보자
+결국 핵심은 이거임 DB를 하나만 쓸 수 없다. DB의 속도가 게임 서버보다 느리기에
+DB를 여러대 두고 샤딩해서 써야 한다. 이러면 성능이 해결된다. 
+이거를 하는 구성이 RDBMS NoSQL이다.
+
+최대한 축약해서 키워드만 대려가보자
+DB 샤딩 필요 => 일관성, 원자성 문제 처리 필요 -> 
+
+
+
+
