--- a/DB/분산 락.md
+++ b/DB/분산 락.md
@@ -1,26 +1,29 @@
 
+# 데이터베이스 락
 
-비관적 락 (Pessimistic Lock)
-임계 영역에 진입하기 전에 락을 걸어 다른 트랜잭션이 진입하지 못하게 하는 일반적인 락 방식
+## 비관적 락 (Pessimistic Lock)
+트랜잭션이 시작될 때 락(Shared Lock 또는 Exclusive Lock)을 걸고 다른 트랜잭션의 read나 write를 막는 방법. <br/>
+충돌이 발생하지 않게 애초에 줄을 세워서 진입시키는 방법. <br/>
+Repeatable Read 또는 Serializable 정도의 격리성 수준을 제공한다. <br/>
 
-낙관적 락 (Optimistic Lock)
-락을 사용하지 않는다. 여러 트랜잭션이 임계 영역에 동시에 접근할 수 있으며 충돌 문제가 생기면 롤백을 하는 방식.
-낙관적 락은 DB가 아니라 애플리케이션 레벨에서 처리한다.
+예) <br/>
+shared lock을 걸게 되면 다른 트랜잭션2에서 write할 때 exclusive lock을 얻어야 하는데 트랜잭션1에서 shared lock이 걸려
+있으므로 lock을 획득하지 못한다. 도식화하면 아래와 같다.
+1. 트랜잭션1에서 name=karol 레코드에 shared lock을 걸고 읽는다
+2. 트랜잭션2에서 name=karol 레코드를 읽는다.
+3. 트랜잭션2에서 write를 위해 exclusive lock을 요청한다.
+4. 트랜잭션1에서 shared lock으로 인해 트랜잭션2는 exclusive lock을 획득할 수 없고 기다린다.
+5. 트랜잭션1에서 commit하여 트랜잭션 완료 후 트랜잭션2에서 exclusive lock을 획득한다.
 
-예제를 통해 이해 <br/>
-User1, User2가 동시에 table1의 record1을 동시에 update하는 상황을 가정해보자.
+TODO : 그림필요 <br/>
 
-Locking이 없는 경우
-
-비관적 락인 경우
-
-낙관적 락인 경우
+## 낙관적 락 ( Lock)
+락을 사용하지 않고 자유롭게 액세스 가능한 환경에서 가장 먼저 진입하는 자의 변경만 
 
 
 
 출처 : <br/>
-https://blog.naver.com/smart_guy/100196538467 <br/>
-
+https://sabarada.tistory.com/175 <br/>
 
 
 
