--- a/DB/분산 락.md
+++ b/DB/분산 락.md
@@ -18,8 +18,21 @@ shared lock을 걸게 되면 다른 트랜잭션2에서 write할 때 exclusive l
 TODO : 그림필요 <br/>
 
 ## 낙관적 락 ( Lock)
-락을 사용하지 않고 자유롭게 액세스 가능한 환경에서 가장 먼저 진입하는 자의 변경만 
+락을 사용하지 않고 임계 영역에 자유롭게 진입 가능하며 충돌이 발생했을 때 가장 먼저 진입한 트랜잭션만 처리하고 
+나머지는 롤백한다. 
 
+예) <br/>
+1. 트랜잭션1에서 name=karol 레코드를 read (version=1)
+2. 트랜잭션2에서 name=karol 레코드를 read (version=1)
+3. 트랜잭션1에서 name=karol 레코드를 write, version 1 유지된 상태에서 2로 변경
+4. 트랜잭션2에서 name=karol 레코드를 write, version 1로 읽고 2로 변경할려고 했으나 2로 변경된 상태라 실패
+
+TODO : 그림 필요 <br/>
+
+낙관적 락은 version과 같은 별도의 필드를 추가하여 업데이트 시에 변경점이 없으면 커밋하는 개념으로 
+version 말고도 hashcode나 timestamp를 사용할 수 있다.
+
+# 롤백 (Rollback)
 
 
 출처 : <br/>
