--- a/DB/트랜잭션 격리수준.md
+++ b/DB/트랜잭션 격리수준.md
@@ -1,86 +1,53 @@
-Transactioin Isolation Level(트랜잭션 격리 수준)
+# 트랜잭션 격리 수준
 
-1 사전에 알아야할 내용<br/>
+# 잠금 종류
+## 공유 잠금 (Shared Lock)
+읽기 잠금, 데이터를 읽을(Read) 때 사용하는 락 <br/>
+트랜잭션1에서 공유 잠금을 걸었을 때 타 트랜잭션에서 공유 잠금은 획득할 수 있지만 배타 잠금은 획득할 수 없다. <br/>
 
-1-1 트랜잭션<br/>
-트랜잭션은 하나의 논리적 작업 단위로 수행되는 일련의 작업이다. ACID(원자성, 일관성, 격리성, 영속성)을 만족해야 한다.
-기본적으로 트랜잭션은 커넥션 수준에서 관리된다.
+### 공유 잠금 추가 설명
+* 트랜잭션1, 2가(이하 T1, T2) 동시에 레코드 A를 Read (공유 잠금 2개 걸림)
+* T1에서 Read 후 Write를 하려고 함 (공유 잠금 해제, 배타 잠금 획득 시도)
+* T2가 덜 읽음 (공유 잠금), T1에서 배타 잠금 획득 실패
+* T2가 다 읽음 (공유 잠금 해제), T1에서 배타 잠금 획득
 
-1-2 Lock<br/>
-다른 트랜잭션에 의한 충돌이나 불완전한 접근을 방지하면서 데이터를 보호하기 위해 트랜잭션이 소유하는 관리 리소스를 말한다.
+## 배타 잠금 (Exclusive Lock)
+쓰기 잠금, 데이터를 쓸(Write) 때 사용하는 락 <br/>
+트랜잭션1에서 배타 락을 걸면 타 트랜잭션에서 이를 해제할 때까지 read, write 할 수 없다. <br/>
 
-1-3 Exclusive Lock(배타적 잠금, XLock)<br/>
-한 트랜잭션에서 배타 잠금을 걸면 타 트랜잭션에서 쓰기 작업을 할 수 없다.
-읽기 작업은 NOLOCK으로 힌트를 주거나 Read Uncommitted 격리 수준하에서만 수행할 수 있다.
+### 배타 잠금 추가 설명
+* T1에서 공유 락을 걸고 있는 경우 T2에서 배타 락을 걸지 못한다.
+* T1에서 배타 락을 걸고 있는 경우 T2에서 배타 락, 공유 락을 걸지 못한다.
 
-INSERT, UPDATE, DELETE와 같은 데이터 수정문은 읽기와 쓰기 작업이 모두 필요하다(수정할 데이터를 읽어와야하기 때문)
-따라서 공유 잠금과 배타적 잠금을 모두 요청한다.
+# 충돌 문제 종류
+## Dirty Read
+타 트랜잭션의 수정 후 commit되지 않은 내용을 읽음
+* T1에서 레코드 A에 접근, 값을 2로 수정
+* T2에서 레코드 A 조회, 값 2 확인
+* T1에서 레코드 A 롤백
 
-1-4 Shared Lock(공유 잠금, SLock)<br/>
-공유 잠금이 리소스에 존재하는 동안 다른 트랜잭션은 해당 데이터를 수정할 수 없다.
-읽기 작업이 완료되면 바로 해제된다.(트랜잭션 격리 수준을 Repeatable Read 이상으로 변경하거나 잠금 힌트를 사용하여 기간을 변경 가능)
-
-<hr/>
-2 동시성 부작용<br/><br/>
-
-2-1 Dirty Read(커밋되지 않은 종속성)<br/>
-커밋되지 않은 데이터를 읽는 경우. 다른 트랜잭션에서 작업이 확정나지 않은 데이터를 읽는 것으로 문제가 될 수 있는 상황.
-
-2-2 Non-Repeatable Read(일관성없는 분석)<br/>
-트랜잭션 내에서 데이터 조회 시 다른 트랜잭션에 의해 레코드가 변하는 경우
-
-2-3 Phantom Read(가상 읽기)<br/>
-트랜잭션 내에서 데이터 조회 시 다른 트랜잭션에 의해 레코드가 생기거나 사라지는 경우
-
-<hr/>
-
-3 트랜잭션 격리 수준(mssql기준)<br/>
-트랜잭션 간 격리되는 정도를 단계별로 나눈 것으로 한 번에 하나만 설정할 수 있다.<br/>
-레벨이 낮을수록 격리 수준이 낮아지는 것으로 성능은 더 향상되지만 발생할 수 있는 부작용의 가짓수는 올라간다.<br/>
-트랜잭션 격리 수준은 읽기 작업 시 획득하는 잠금 유형을 정의하는 것이며 쓰기 작업에 대해서는 항상 배타 잠금이 발생한다.<br/>
-트랜잭션에서 행을 읽은 후 수정하면 트랜잭션은 해당 행을 보호하기 위해 배타적 잠금을 획득한다. 이러한 배타적 잠금은 트랜잭션이 완료될 때 까지 유지된다. 예를 들어 Repeatable Read 트랜잭션이 행에 공유 잠금을 설정한 다음 해당 행을 수정하면 공유 행 잠금은 배타적 행 잠금으로 변환된다.<br/>
-<table>
-<th>격리 레벨</th><th>Dirty Read</th><th>Non-Repeatable Read</th><th>Phantom Read</th>
-<tr>
-  <td>Read Uncommitted(Level 0)</td><td>발생</td><td>발생</td><td>발생</td>
-</tr>
-<tr>
-  <td>Read Committed(Level 1)</td><td>발생X</td><td>발생</td><td>발생</td>
-</tr>
-<tr>
-  <td>Repeatable Read(Level 2)</td><td>발생X</td><td>발생X</td><td>발생</td>
-</tr>
-<tr>
-  <td>Serializable(Level 3)</td><td>발생X</td><td>발생X</td><td>발생X</td>
-</tr>
-</table>
-
-3-1 - Read Uncommitted<br/>
-이 수준에서 실행되는 트랜잭션은 타 트랜잭션이 현재 트랜잭션에서 읽은 데이터를 수정하지 못하도록 공유 잠금을 발행하지 않는다.
-또한 데이터 수정 시 트랜잭션이 배타적 잠금에 의해 차단되지 않으므로 아직 커밋되지 않은 수정된 데이터를 타 트랜잭션이 읽을 수 있다.
-
-Dirty Read가 발생할 수 있는 환경
-
-3-2 - Read Committed<br/>
-Read Committed 단계에서는 트랜잭션이 데이터 수정 시 배타적 잠금을 발행하므로 아직 커밋되지 않은 수정된 데이터를 다른 트랜잭션이 읽을 수 없다.(Dirty Read 방지)<br/>
-그러나 현재 트랜잭션 내의 개별 명령문들간에 타 트랜잭션에 의해 변경될 수 있다. 이로 인해 Non-Repeatable Read 또는 Phantom Row가 발생할 수 있다.
-
-Dirty Read, Non-Repeatable Read가 발생할 수 있는 환경
-
-3-3 - Repeatable Read<br/>
-Read Committed 단계 + 타 트랜잭션은 현재 트랜잭션이 읽은 내용을 현재 트랜잭션이 완료할 때까지 수정할 수 없다.
-공유 잠금은 트랜잭션의 각 문에서 읽은 모든 데이터에 적용되며 트랜잭션이 완료될 때까지 유지된다. 이렇게 하면 타 트랜잭션이 현재 트랜잭션에서 읽은 행을 수정할 수 없다.(Non-Repeatable Read 방지)
-그러나 타 트랜잭션에서 현재 트랜잭션에서 검색한 조건과 일치하는 새 행을 삽입할 수 있다. 그런 다음 현재 트랜잭션에서 검색 문을 다시 시도하면 새 행이 검색되어 Phantom Row가 발생한다.
-
-<br/>Dirty Read, Non-Repeatable Read, Phantom Read가 발생할 수 있는 환경
-
-3-4 - Serializable<br/>
-트랜잭션 간 완전히 격리되는 수준.
+## Non-Repeatable Read
 
 
-<hr/>
+## Phantom Read
 
-출처 : 
-https://learn.microsoft.com/ko-kr/sql/t-sql/statements/set-transaction-isolation-level-transact-sql?view=sql-server-ver16
 
-https://www.sqlservercentral.com/articles/isolation-levels-in-sql-server#:~:text=SQL%20Server%20isolation%20levels%20are%20used%20to%20define,or%20data%20modifications%20made%20by%20other%20concurrent%20transactions.
+# 잠금 레벨
+## 1. READ UNCOMMITTED
+현재 트랜잭션에서 read한 데이터를 다른 트랜잭션에서 write하지 못하도록 하는 공유 잠금을 실행하지 않는다.
+다른 트랜잭션에서 수정되었지만 아직 커밋되지 않은 행을 현재 트랜잭션이 읽지 못하도록하는 배타적 잠금에 의해 차단되지 않는다.
+=> 공유 락을 사용하지 않고, 배타락을 사용하지만 침범한다.
+트랜잭션 잠금 레벨에서 가장 제한이 적다. 
+
+### READ UNCOMMITTED에서 발생할 수 있는 충돌 문제
+Dirty Read
+
+## 2. READ COMMITTED
+SQL Server의 기본 잠금 레벨.
+
+### READ COMMITTED에서 발생할 수 있는 충돌 문제
+Dirty Read는 방지.
+반복할 수 없는 읽기
+가상 읽기
+
+## 3. REPEATABLE READ
