--- a/DB/트랜잭션 격리수준.md
+++ b/DB/트랜잭션 격리수준.md
@@ -1,7 +1,7 @@
 # 트랜잭션 격리 수준
 
-# 잠금 종류
-## 공유 잠금 (Shared Lock)
+# 1. 잠금
+## 1-1. 공유 잠금 (Shared Lock)
 읽기 잠금, 데이터를 읽을(Read) 때 사용하는 락 <br/>
 트랜잭션1에서 공유 잠금을 걸었을 때 타 트랜잭션에서 공유 잠금은 획득할 수 있지만 배타 잠금은 획득할 수 없다. <br/>
 
@@ -11,7 +11,7 @@
 * T2가 덜 읽음 (공유 잠금), T1에서 배타 잠금 획득 실패
 * T2가 다 읽음 (공유 잠금 해제), T1에서 배타 잠금 획득
 
-## 배타 잠금 (Exclusive Lock)
+## 1-2. 배타 잠금 (Exclusive Lock)
 쓰기 잠금, 데이터를 쓸(Write) 때 사용하는 락 <br/>
 트랜잭션1에서 배타 락을 걸면 타 트랜잭션에서 이를 해제할 때까지 read, write 할 수 없다. <br/>
 
@@ -19,35 +19,69 @@
 * T1에서 공유 락을 걸고 있는 경우 T2에서 배타 락을 걸지 못한다.
 * T1에서 배타 락을 걸고 있는 경우 T2에서 배타 락, 공유 락을 걸지 못한다.
 
-# 충돌 문제 종류
-## Dirty Read
-타 트랜잭션의 수정 후 commit되지 않은 내용을 읽음
+# 2. 부정합 문제
+타 트랜잭션에서 액세스하고 있는 레코드에 액세스함으로써 발생하는 문제
+
+## 2-1. Dirty Read
+커밋되지 않은 내용을 읽는 문제 <br/>
+### 상황 예제
+한 트랜잭션에서 수정 후 커밋하지 않은 내용을 타 트랜잭션에서 접근하는 상황
 * T1에서 레코드 A에 접근, 값을 2로 수정
 * T2에서 레코드 A 조회, 값 2 확인
 * T1에서 레코드 A 롤백
 
-## Non-Repeatable Read
+## 2-2. Non-Repeatable Read
+한 트랜잭션에서 같은 조건으로 2번 이상 탐색할 때, 데이터의 값이 변경되어 있는 경우
+### 상황 예제
+* T1에서 레코드 A를 읽음, 값이 40
+* T2에서 레코드 A를 100으로 변경
+* T1에서 레코드 A를 읽음, 값이 100
+
+## 2-3. Phantom Read
+한 트랜잭션에서 같은 조건으로 2번 이상 탐색할 때, 없던 데이터가 생기거나 있던 데이터가 사라지는 문제
+### 상황 예제
+* T1에서 SELECT * FROM TABLE1 수행, 검색 결과로 행 3개
+* T2에서 TABLE1에 INSERT 또는 DELETE
+* T1에서 SELECT * FROM TABLE1 한 번 더 수행, 검색 결과로 행이 2개(삭제됨) 또는 4개로(추가됨) 나오는 경우
+
+# 3. 잠금 레벨
+MSSQL 기준으로 설명 <br/>
+READ UNCOMMITTED, READ COMMITTED, REPEATABLE READ, SERIALIZABLE, SNAPSHOT 이 있다. <br/>
+위의 잠금 레벨들 중 하나를 설정하면 행하는 모든 트랜잭션이 해당 레벨의 잠금 수준을 따른다. <br/>
+## 3-1. READ UNCOMMITTED
+MSDN의 설명을 따르면 T1에서 read한 데이터를 T2에서 write하지 못하도록 공유 잠금을 설정하지 않고 <br/>
+T1에서 write되었지만 커밋되지 않은 행을 T2에서 read하지 못하도록 배타 잠금을 설정하지도 않는다. <br/>
+=> 트랜잭션간의 격리가 아예 없는 레벨이다.
+* 발생할 수 있는 문제 : Dirty Read, Non-Repeatable Read, Phantom Read
+
+## 3-2. READ COMMITTED
+SQL Server 및 대다수 RDBMS의 기본 잠금 레벨. <br/>
+
+트랜잭션이 데이터 수정 시 배타 잠금을 수행하기에 아직 커밋되지 않은 수정 내용을 
+타 트랜잭션에서 읽을 수 없다.(Dirty Read 방지)
+
+READ COMMITTED는 READ_COMMITTED_SNAPSHOT 옵션의 ON/OFF에 따라 동작이 다르다.
+옵션 OFF <br/>
+공유 잠금은 현재 트랜잭션이 읽는 동안 타 트랜잭션에서 수정할 수 없도록 한다.
+또한 타 트랜잭션이 수정한 행을 커밋할 때까지 읽지 못한다.
+
+예제) <br/>
+* T1에서 레코드 A 변경 (A=80)
+* T2에서 레코드 A 조회, 접근 불가 & 대기
+* T1에서 레코드 A 다시 변경 (A=8000) 후 커밋
+* T2에서 레코드 대기하다가 조회됨, A = 8000
+
+옵션 ON <br/>
+데이터에 대한 잠금이 사용되지 않는다. 행 버전 관리를 사용한다.
 
 
-## Phantom Read
+
+* 발생할 수 있는 문제 : Non-Repeatable Read, Phantom Read
+
+## 3-3. REPEATABLE READ
 
 
-# 잠금 레벨
-## 1. READ UNCOMMITTED
-현재 트랜잭션에서 read한 데이터를 다른 트랜잭션에서 write하지 못하도록 하는 공유 잠금을 실행하지 않는다.
-다른 트랜잭션에서 수정되었지만 아직 커밋되지 않은 행을 현재 트랜잭션이 읽지 못하도록하는 배타적 잠금에 의해 차단되지 않는다.
-=> 공유 락을 사용하지 않고, 배타락을 사용하지만 침범한다.
-트랜잭션 잠금 레벨에서 가장 제한이 적다. 
+출처 : <br/>
 
-### READ UNCOMMITTED에서 발생할 수 있는 충돌 문제
-Dirty Read
+<hr/><br/><br/>
 
-## 2. READ COMMITTED
-SQL Server의 기본 잠금 레벨.
-
-### READ COMMITTED에서 발생할 수 있는 충돌 문제
-Dirty Read는 방지.
-반복할 수 없는 읽기
-가상 읽기
-
-## 3. REPEATABLE READ
