--- a/DB/트랜잭션 격리수준.md
+++ b/DB/트랜잭션 격리수준.md
@@ -175,8 +175,82 @@ WHERE  session_id = @@SPID
 
 <br/><br/>
 
-## 테스트3
+## 3. Read UnCommitted 잠금 레벨 테스트
+### 3-1) Read UnCommitted 테스트
+```sql
+--T1
+set transaction isolation level read uncommitted;
+begin tran
+update ttt set name='sss' where id=1;
 
+--T2
+set transaction isolation level read uncommitted;
+begiin tran
+update ttt set name='nnn' where id=1;
+```
+실행 결과 : <br/>
+T2에서 대기가 걸리고 T1에서 커밋이나 롤백을 하면 완료가 된다. <br/>
 
+```sql
+-- T1
+begin tran
+update ttt set name='sss' where id=1;
+
+-- T2
+begin tran
+udpate ttt set name='sss' where id=2;
+```
+실행 결과 : <br/>
+또 다른 트랜잭션(T3)에서 Select하여 결과를 보면 id=1, 2인 행들이 각각 T1과 T2에 의해 name이 sss로 변경되어 있다. <br/>
+
+```sql
+-- T1
+begin tran
+update ttt set name='sss' where id=1;
+
+-- T2
+begin tran
+select * from ttt;
+commit;
+```
+실행 결과 : <br/>
+T1에 의해 id=1인 레코드의 name이 sss로 변경된 결과물이 출력된다. <br/>
+
+### 3-2) Read UnCommitted 정리
+* Write 작업(INSERT, UPDATE, DELETE)은 잠금 레벨 상관없이 X락을 잡는다.
+* 
+* Read UnCommitted 잠금 레벨에서는 Read 작업(SELECT)에서 S락을 잡지 않는다.
+위의 두 내용으로 T1에서 수정했으나 커밋하지 않은 내용을 T2에서 읽을 수 있다는 Dirty Read 정합성 문제가 발생한다.
+## 4. Read Committed 잠금 레벨 테스트
+### 4-1) Read Committed 테스트
+```sql
+-- T1
+set transaction isolation level read committed;
+begin tran
+update ttt set name='sss' where id=1;
+
+-- T2
+set transaction isolation level read committed;
+begin tran
+update ttt set name='nnn' where id=1;
+```
+실행 결과 : <br/>
+T2에서 대기가 걸리고 T1에서 커밋이나 롤백을 하면 완료가 된다. <br/>
+
+```sql
+-- T1
+set transaction isolation level read committed;
+begin tran
+update ttt set name='sss' where id=1;
+
+-- T2
+set transaction isolation level read committed;
+begin tran
+select * from ttt;
+```
+실행 결과 : <br/>
+T2에서 대기가 걸리고 T1에서 커밋이나 롤백을 하면 완료가 된다. <br/>
+
+### 4-2) Read Committed 정리
 
 
