--- a/DB/Redis/시작.md
+++ b/DB/Redis/시작.md
@@ -164,15 +164,42 @@ Write Around 전략은 생각보다 너무 간단하다. 데이터를 저장할 
 그러다 데이터를 조회할 때 레디스에 데이터가 없으면 DB로부터 데이터를 조회해와서 레디스에 저장시켜주는 방식이다.
 
 # Cache Aside, Write Around 전략의 한계와 해결법
-## 한계 1. 캐시된 데이터와 DB 데이터가 일치하지 않을 수 있다.
+일반적으로 Cache Aside와 Write Around를 같이 쓴다고 한다. 그 상황에서 발생하는 한계에 대한 내용과 해결 방법을 알아본다.
+## 한계
+1. 캐시된 데이터와 DB의 데이터가 일치하지 않을 수 있다. (데이터 일관성 문제)
+   Write Around 전략에 따라 데이터를 수정할 때 DB만 업데이트를 시키기 때문에 기존에 저장된 레디스의 데이터와는 다를 수 밖에 없다.
+   예를 들어, 프로필 수정에서 이름을 박재성에서 박선재로 바꿨는데, 프로필을 조회해봤더니 이름이 여전히 박재성으로 표시된다는 뜻이다.
+2. 캐시에 저장할 수 있는 공간이 비교적 적다.
+   DB는 디스크(Disk)에 저장해서 많은 양을 저장하기 용이하지만 캐시는 메모리(RAM)에 저장하기 때문에 DB에 비해 많은 양의 데이터를
+   저장할 수 없다.
 
-## 한계 2. 캐시에 저장할 수 있는 공간이 비교적 작다.
-DB는 디스크(Disk)에 저장해서 많은 양을 저장하기 용이하지만, 캐시는 메모리(RAM)에 저장하기 때문에
-DB에 비해 많은 양의 데이터를 저장할 수가 없다.
+## 해결 방법
+1. 캐시된 데이터와 DB 데이터가 일치하지 않을 수 있다.
+캐시와 DB의 데이터를 일치시키기 위해, 데이터를 수정할 때마다 DB와 레디스 둘 다 업데이트 시키면 성능적으로 느려진다.
+그렇다고 성능 향상을 위해 DB의 데이터만 업데이트 시키면 캐시와 DB의 데이터가 일치하지 않게 된다. <br/>
 
-## 해결법
-### 캐시된 데이터와 DB 데이터가 일치하지 않을 수 있다.
-캐시와 DB의 데이터를 일치시키기 위해, 데이터를 수정할 때마다 동시에 업데이트 시키면 
+어쩔 수 없다. 어떤 선택을 하든 기회 비용(Trade Off)이 발생한다. 대부분의 개발 기술들이 장점이 있으면 단점이 있다. 따라서
+데이터 조회 성능 개선 목적으로 레디스를 쓰는 경우에는 데이터의 일관성을 포기하고 성능 향상을 택한 것이다. <br/>
+
+이러한 이유로 인해 캐시를 적용시키기에 적절한 데이터는 다음과 같다.
+* 자주 조회되는 데이터
+* 잘 변하지 않는 데이터
+* 실시간으로 정확하게 일치하지 않아도 되는 데이터
+정리하자면 read가 자주 되고 write는 그에 비해 현저히 적으며 정합성이 완벽하게 요구되지 않는 상황에서 사용하는 방법이라는 것이다. <br/>
+
+위의 조건에 부합한다고 하더라도 장기간 데이터가 일치하지 않는 건 문제가 될 수 있다. 따라서 적절한 주기로 데이터를 동기화시켜주어야 하는데 
+이 때 활용하는 기능이 레디스의 TTL 기능이다. <br/>
+
+일정 시간이 지나면 데이터가 만료되어 캐시에서 삭제된다. 그럼 특정 사용자가 조회를 하는 순간 Cache Miss가 발생하고 DB의 데이터를 
+새로 조회해와서 캐시에 데이터를 넣게 된다. 즉, 데이터가 새롭게 갱신되는 효과가 있는 것이다.
+
+2. 캐시에 저장할 수 있는 공간이 비교적 작다.
+위에서 활용했던 TTL 기능을 활용하면 캐시의 공간을 효율적으로 쓸 수 있다. 왜냐면 자주 조회하지 않는 데이터는 만료 시간에 의해 데이터가
+삭제되기 때문이다.
+
+## 정리
+Cache Aside, Write Around 전략을 사용할 때 주로 TTL을 같이 활용한다. <br/>
+
 
 출처 : <br/>
 https://www.youtube.com/watch?v=IgVg6GhzFk8&list=PLtUgHNmvcs6qoVrxB5jzZ4meINz_KL-Bl <br/>
