--- a/Docker/시작.md
+++ b/Docker/시작.md
@@ -1,7 +1,71 @@
-# Docker? Docker를 왜 배우는가
+# Docker를 왜 배우는가
 Docker를 쓰는 이유에는 여러가지 장점이 있지만 그 중에서 핵심 장점 딱 1가지만 기억하자. <br/>
+### 이식성
+특정 프로그램을 다른 곳으로 쉽게 옮겨서 설치 및 실행할 수 있는 특성 <br/>
+이 핵심 장점을 아래 예시를 통해 이해해보자. <br/>
+<table>
+  <td>
+    친구는 컴퓨터에 MySQL을 아무 에러 없이 잘 깔았다. 그런데 내 컴퓨터에 MySQL을 깔려고 하니 이상하게 에러가 뜬다. 이런 경우는 상당히 흔하게
+    발생한다. <br/><br/>
+    내 컴퓨터에만 MySQL이 안 깔리는 이유는 다양하다. 버전이 다른 걸 설치했거나, 운영체제가 다르거나, 내 컴퓨터에 갈려있는 다른 프로그램(ex. 보안 프로그램)과 충돌이 일어났거나와 같은 다양한 이유로 프로그램이 정상적으로 설치되지 않는다. <br/><br/>
+    이 과정이 복잡하거나 또 이런 상황을 몇 번 겪고 나면 새 컴퓨터를 사서 MySQL을 설치할 때마다 번거롭고 귀찮다고 느껴진다.
+  </td>
+</table>
 
-* 이식성
+위의 문제를 해결하기 위해 나타난 툴이 Docker이다. Docker를 사용하면 명령어 한 줄로 어떤 컴퓨터에서든 MySQL을 에러 없이 설치하고 실행할 수 있게 된다. 뿐만 아니라 아래와 같은 장점이 있다.
+* 매번 귀찮게 설치 과정을 일일이 거치지 않아도 된다.
+* 항상 일관되게 프로그램을 설치할 수 있다. (버전, 환경 설정, 옵션, 운영 체제 등)
+* 각 프로그램이 독립적인 환경에서 실행되기 때문에 프로그램 간에 서로 충돌이 일어나지 않는다.
 
-이 핵심 장점을 아래 예시를 통해 이해해보자.
+# Docker? 컨테이너(Container)? 이미지(Image)?
+Docker는 뭐다하고 설명하면 잘 와닿지 않으므로 최대한 예시로 설명하고 제대로 된 감각은 실습을 통해서 알아본다. <br/>
+### Docker
+컨테이너를 사용하여 각각의 프로그램을 분리된 환경에서 실행 및 관리할 수 있는 툴이다. <br/>
+
+### 컨테이너(Container) 
+윈도우 환경을 사용해보면 하나의 컴퓨터에 여러 사용자로 나눠서 사용할 수 있게끔 구성되어 있다. 각 사용자의 환경에 들어가보면 독립적으로 구성되어 있어서 필요한 프로그램을 각 사용자 환경에 따로따로 설치해주어야 한다. a라는 사용자 환경에서 카카오톡을 깔아서 사용하는데 b라는 사용자 환경으로 들어가면 카카오톡이 없다. <br/>
+
+Docker의 컨테이너가 이와 비슷한 개념이다. 하나의 컴퓨터 환경 내에서 독립적인 컴퓨터 환경을 구성해서 각 환경에 프로그램을 별도로 설치할 수 있게 만든 개념이다. 하나의 컴퓨터 환경 내에서 여러 개의 미니 컴퓨터 환경을 구성할 수 있는 형태라고 생각하면 되며 여기서
+미니 컴퓨터를 Docker에서 컨테이너(Container)라고 한다. 여기서 컨테이너와 컨테이너를 포함하고 있는 컴퓨터를 구분하기 위해 컨테이너를 포함하고 있는 컴퓨터를 호스트(host) 컴퓨터라고 한다.<br/>
+<img src="https://github.com/user-attachments/assets/8273c490-a4df-4e95-8c92-59e010e50f00" width="400" height="300" />
+
+##### 컨테이너(Container)의 독립성
+위의 설명에서 컨테이너는 독립적인 컴퓨터 환경이라 했다. 구체적으로 어떤 것들이 독립적으로 관리되는지 기억해두자.
+* 디스크(저장 공간) <br/> 
+  각 컨테이너마다 서로 각자의 저장 공간을 가지고 있다. 일반적으로 a 컨테이너 내부에서 b 컨테이너 내부에 있는 파일에 접근할 수 없다.
+* 네트워크(ip, port) <br/>
+  각 컨테이너마다 고유의 네트워크를 가지고 있다. 컨테이너는 각자의 ip 주소를 가지고 있다.
+
+### 이미지(Image)
+닌텐도와 같은 게임기를 보면 여러가지 칩을 꽂아서 다양한 게임을 즐길 수 있게 되어 있다. Docker에서는 닌텐도의 칩과 같은 역할을 하는 개념이 이미지(Image)이다. <br/>
+
+Node.js 기반의 Express.js 서버 프로젝트를 이미지로 만들었다고 가정해보자. 이 이미지를 Docker로 실행시키면 Express.js 서버 프로젝트가 컨테이너(Container) 환경에서 실행된다. 복잡한 설치 과정을 거칠 필요 없이 손 쉽게 실행된다. <br/>
+
+MySql 서버를 이미지로 만들었다면 이 이미지를 Docker로 실행시키는 순간 MySQL 서버가 컨테이너(Container) 환경에서 실행된다. MySQL을 일일이 설치할 필요없이 MySQL DB를 사용할 수 있게 된다. <br/>
+
+미니 컴퓨터인 컨테이너에 게임칩인 이미지(Express.js)를 꽂으면 웹서버가 되고 MySQL 이미지를 꽂으면 MySQL DB를 사용할 수 있게 된다. <br/>
+
+이미지(Image)는 프로그램을 실행하는데 필요한 설치 과정, 설정, 버전 정보 등을 포함하고 있다. 즉 프로그램을 실행하는데 필요한 모든 것을 포함하고 있다.
+
+# 실습 시작
+## 이미지 다운로드 (nginx)
+```
+// 이미지 다운로드
+docker pull nginx
+
+// 다운 받은 이미지 조회
+docker image ls
+
+// 이미지 다운로드시 버전(태그, Tag) 명시
+// 태그 명시를 하지 않으면 latest를 가져온다.
+docker pull nginx:stable-alpine3.19-perl
+
+// 이미지 삭제
+docker image rm
+
+```
+이미지는 dockerhub이라고 깃허브와 비슷한 개념을 하는 사이트에 저장되어 있으며 우리가 docker pull 명령을 하면 dockerhub으로부터 다운 받는 것이다.
+
+
+
 
