--- a/DB/Focus/흐름 정리.md
+++ b/DB/Focus/흐름 정리.md
@@ -3,6 +3,9 @@
 그래서 DB 트래픽을 분산할 목적으로 샤딩을 고려할 수 있다.
 이렇게 DB를 분산할 시에 특정 DB의 장애가 전면장애로 이어지지 않는다는 장점은 보너스이다. (물론 보통 HA 구성을 하긴 하지만)
 
+질문0 -
+게임 서버는 웹과 다르게 데이터를 메모리에 들고 있다고 하는데.... 현재 위치 등의 정보를 손실시 리스크가 없는 정보라고 할 때
+아이템과 같은 정보는 손실시 리스크가 큰 정보인데 이것의 처리를 어떻게 해야하는가
 
 질문1 - mmorpg에서 db 샤딩이 필요한가
 
