--- a/DB/Focus/흐름 정리.md
+++ b/DB/Focus/흐름 정리.md
@@ -1,15 +1,179 @@
-# DB 샤딩
-하나의 DB에 데이터가 늘어나면 용량 이슈도 생기고 느려지는 CRUD는 자연스레 서비스 성능에 영향을 준다.
-그래서 DB 트래픽을 분산할 목적으로 샤딩을 고려할 수 있다.
-이렇게 DB를 분산할 시에 특정 DB의 장애가 전면장애로 이어지지 않는다는 장점은 보너스이다. (물론 보통 HA 구성을 하긴 하지만)
+# 시작
 
-질문0 -
-게임 서버는 웹과 다르게 데이터를 메모리에 들고 있다고 하는데.... 현재 위치 등의 정보를 손실시 리스크가 없는 정보라고 할 때
-아이템과 같은 정보는 손실시 리스크가 큰 정보인데 이것의 처리를 어떻게 해야하는가
+<hr/><br/><br/>
 
-질문1 - mmorpg에서 db 샤딩이 필요한가
+# 질문1
+c++, mysql을 사용해서 게임 서버를 만들었는데 db 샤딩이 필요한가? <br/>
 
-질문2 - db 샤딩을 하면 분산 트랜잭션을 구현해야 하는가
+# 답변1
+DB 샤딩이 필요한지 여부는 게임 서버의 트래픽 규모, 데이터 구조, 성능 요구사항, 그리고 확장성 전략에 따라 달라진다.
+아래에 샤딩이 필요한지 판단할 수 있는 기준을 정리해줄게.
 
-질문3 - 분산 트랜잭션은 어떻게.. redis를 사용하는 것이 좋은가
+## DB 샤딩이 필요한 경우
+다음과 같은 상황이라면 샤딩을 고려해야 한다.
+1. DB가 성능 병목이 되고 있다. <br/>
+   플레이어 수가 많아지면서 읽기/쓰기 요청이 너무 많아 단일 MySQL 인스턴스로는 처리할 수 없음.<br/>
+   DB 응답 시간이 느려지고, 커넥션 풀이 자주 포화됨.<br/>
+2. 데이터 양이 너무 많다 <br/>
+   한 테이블에 수천만 건 이상 쌓이고 있고, 인덱스나 쿼리 성능이 저하되고 있음.<br/>
+   MySQL 인스턴스의 디스크 용량, 메모리 사용량이 임계치에 가까움.<br/>
+5. 확장성을 수평적으로 가져가야 한다 <br/>
+   게임이 글로벌 서비스로 커지고 있으며, 지역/서버별로 분산 처리가 필요함<br/>
+   (예: 유저ID 1억까지는 A 서버, 유저ID 2억까지는 B 서버 등)<br/>
+
+## DB 샤딩이 필요 없는 경우
+* 동시에 접속하는 유저 수가 수천~수만 명 이내이고, DB 부하가 크지 않음
+* MySQL 단일 서버 또는 리플리케이션으로도 충분한 퍼포먼스를 낼 수 있음.
+* 샤딩으로 인한 복잡한 로직 관리, 트랜잭션 처리 문제 등을 감당할 만큼의 이점이 없음
+
+## 샤딩을 도입할 경우 고려할 점
+1. 샤딩 키 선정<br/>
+   일반적으로 user_id 또는 account_id 등으로 샤딩함<br/>
+   쿼리 조건에서 항상 샤딩 키가 있어야 특정 shard를 조회할 수 있음<br/>
+2. 샤딩 라우터 구현<br/>
+   c++ 서버 로직에서 어떤 shard로 쿼리를 보낼지 결정하는 라우터 코드가 필요<br/>
+   예: user_id & shard_count 방식의 해시 기반 샤딩<br/>
+3. 트랜잭션과 조인 어려움<br/>
+   서로 다른 shard 간 트랜잭션은 어렵고, 복잡한 조인도 힘듬<br/>
+   설계 시 이를 감안하여 데이터 모델을 정규화하지 않고 denormalized 형태로 유지하는 경우도 많음<br/>
+4. 운영 툴<br/>
+   샤드 별 마이그레이션, 백업, 장애 대응이 까다로움<br/>
+   이를 위한 관리 도구도 필요할 수 있음<br/>
+
+## 추천
+* 초기에는 단일 DB 구조 + 슬레이브 리플리케이션으로 시작해라
+* 추후 트래픽이 증가하면 Read/Write 분리 -> 샤딩 구조로 점진적으로 넘어가도 늦지 않다.
+* 마이크로서비스 구조로 유저 데이터를 분리해서 관리하는 것도 방법이다.
+
+필요하다면 샤딩 예제 코드(c++ 기준)나 샤딩 전략 설계도 도와줄 수 있다. <br/>
+현재 게임 서버의 규모나 유저 수, DB 구조를 조금만 더 알려주시면 구체적인 판단을 도와드릴게요. <br/>
+
+<hr/><br/><br/>
+위에서 연결되는 질문 <br/>
+
+# 질문2
+mmorpg 형식의 게임이고 한 게임 서버에서 감당하는 유저수는 1000명 정도 <br/>
+
+# 답변2
+감사합니다. MMORPG 형식이고, 한 서버에서 동시 접속자(Concurrent Users)가 약 1000명 수준이라면 현재 단계에서는 DB 샤딩은
+필요하지 않습니다.
+
+## 왜 샤딩이 필요 없을까?
+1. 유저 수 기준 <br/>
+   MMORPG에서 1000명 동시 접속자는 비교적 소규모 서버입니다.<br/>
+   일반적인 MySQL 인스턴스(적절히 튜닝된 경우)는 수천~수만 명 수준의 유저 데이터 처리도 무리 없이 가능하다.<br/>
+2. 데이터 크기<br/>
+   MMORPG라도, 한 유저가 가진 데이터(인벤토리, 퀘스트, 상태 등)가 매우 크지 않다면, 수십만 명 유저의 전체 데이터를 단일 MySQL에서 관리 가능하다.<br/>
+   참고로 한 유저당 1KB, 10KB 정도의 데이터라고 가정해도 100만의 유저 = 약 110GB<br/>
+3. 트래픽<br/>
+   MMORPG는 보통 실시간 처리는 메모리(게임 서버)에서, 저장만 DB에 하는 구조라 DB 트래픽이 폭발적이지 않음.<br/>
+   캐싱(Memcached, Redis 등)을 잘 활용하면, 더욱 DB 부하를 줄일 수 있음<br/>
+
+## 대신 지금 고려하면 좋은 점
+1. Read/Write 분리<br/>
+   슬레이브를 두고 읽기 전용 쿼리를 슬레이브로 보내는 구조<br/>
+   C++ 서버단에서 슬레이브를 활용하면 확장성이 좋아짐<br/>
+2. DB Index 최적화<br/>
+   자주 사용하는 쿼리에 대한 인덱스를 미리 잘 잡아두면 퍼포먼스가 훨씬 상향된다.<br/>
+3. 샤딩을 고려한 테이블 설계<br/>
+   지금 샤딩은 도입하지 않더라도, 나중에 유저 데이터를 분산하기 쉽게 테이블에 user_id 같은 고유 식별자를 일관되게 넣어두는 것이 좋다.<br/>
+   예를 들어 inventory, quests, mailbox 같은 테이블은 모두 user_id로 시작되게 설계하기.<br/>
+
+## 정리 : 지금 단계에서는 이렇게 하시오
+<table>
+  <tr>
+    <th>항목</th><th>권장 사항</th>
+  </tr>
+  <tr>
+    <td>샤딩</td><td>불필요(오버엔지니어링 가능성 높음)</td>
+  </tr>
+  <tr>
+    <td>슬레이브</td><td>고려 가능(읽기 분산)</td>
+  </tr>
+  <tr>
+    <td>인덱스</td><td>자주 사용하는 칼럼에 적절한 인덱스 설정</td>
+  </tr>
+  <tr>
+    <td>캐시</td><td>Redis 등으로 핫 데이터 캐싱</td>
+  </tr>
+  <tr>
+    <td>구조 설계</td><td>나중에 샤딩/분산이 가능하도록 user_id 기반 설계</td>
+  </tr>
+</table>
+
+필요하시면 C++에서의 MySQL 슬레이브/마스터 연결 구조 예제나, MMORPG용 DB 테이블 설계 샘플도 도와드릴 수 있어요.
+
+<hr/><br/><br/>
+위에서 연결되는 질문 <br/>
+
+# 질문3
+왜 샤딩이 필요없는지 설명하는 항목 중 트래픽 내용에서 저장만 DB에 하는 구조라서 DB 트래픽이 많지 않다는 것은 읽기 작업은 별로 없어서 트래픽이 별로 없다는 말인가
+
+# 답변3
+좋은 질문입니다. 핵심을 정확히 짚으셨어요. <br/>
+제가 말한 "저장만 DB에 한다"는 말의 뜻을 정확히 풀어서 설명드리면 다음과 같습니다.
+
+## MMORPG 서버 구조에서 "DB 트래픽이 많지 않다"는 뜻
+MMORPG 같은 실시간 게임은 실시간 동작(이동, 스킬, 채팅 등) 대부분을 게임 서버 메모리에서 처리하고, DB는 주로 "영속적 저장" 또는 "비동기 로딩" 용도로 사용된다.
+
+1. 실시간 데이터는 DB가 아니라 메모리에 있음<br/>
+   예를 들어<br/>
+   * 플레이어가 몬스터를 공격하거나 이동할 때<br/>
+   * 다른 플레이어와 교류(채팅, 파티 등)를 할 때<br/>
+   이런 행위는 거의 DB를 거치지 않고 게임 서버 내부의 메모리 구조에서 즉시 처리된다.<br/>
+즉, DB에 읽기 요청이 들어갈 일이 거의 없음.<br/>
+
+2. DB는 다음 작업에만 사용
+<table>
+  <tr>
+    <th>작업 유형</th><th>설명</th><th>빈도</th>
+  </tr>
+  <tr>
+    <td>초기 접속 시 로딩</td><td>유저 정보, 인벤토리, 퀘스트 불러오기</td><td>로그인 시 1회</td>
+  </tr>
+  <tr>
+    <td>주기적 저장</td><td>1~5분마다 상태 저장(비동기 또는 배치)</td><td>수 분마다 1회</td>
+  </tr>
+  <tr>
+    <td>게임 종료 시 저장</td><td>상태를 저장하고 세션 종료</td><td>세션마다 1회</td>
+  </tr>
+  <tr>
+    <td>장비 강화, 아이템 교환 등</td><td>특정 이벤트에 따른 변경</td><td>사용자 행동에 따라 다름</td>
+  </tr>
+  <tr>
+    <td>랭킹, 친구 목록 보기 등</td><td>일부 읽기 요청(랭킹은 Redis 캐시가 많음)</td><td>중간</td>
+  </tr>
+</table>
+대부분은 쓰기(write) 요청이고, 읽기(read) 요청은 로그인 시 혹은 특정 메뉴(랭킹 보기 등)에서만 발생.
+
+## 그래서 DB 트래픽이 많지 않다는 말은?
+정확히는 
+* 읽기 트래픽도 적고
+* 쓰기 트래픽도 게임의 성격상 고주파가 아님 (저장 주기가 있음)
+* 실시간 처리를 DB가 하지 않기 때문에, DB에 요청이 몰리는 구조가 아님
+
+즉, DB는 "기록" 또는 "로그용 저장소"의 역할에 가깝고, 실시간 전투나 행동 처리의 병목이 되지 않기 때문에 초기에는
+DB 병목이 잘 발생하지 않습니다.
+
+## 요약
+<table>
+  <tr>
+    <th>질문 항목</th><th>설명</th>
+  </tr>
+  <tr>
+    <td>"DB 트래픽이 많지 않다"는 뜻은?</td>
+    <td>실시간 데이터는 메모리에서 처리되고, DB는 주로 저장용이라 요청량이 많지 않다는 의미</td>
+  </tr>
+  <tr>
+    <td>읽기 트래픽도 적은가?</td>
+    <td>네. 로그인/랭킹 등 일부 기능에서만 발생하며, 대부분은 캐시로도 대체 가능</td>
+  </tr>
+  <tr>
+    <td>MMORPG 구조에서 왜 DB가 병목이 아닐 수 있나?</td>
+    <td>서버 메모리에서 거의 모든 실시간 처리를 하기 때문</td>
+  </tr>
+</table>
+추가적으로 MMORPG 구조에서 캐시(Redis)나 큐(Kafka, RabbitMQ 등)를 활용한 구조도 자주 사용되는데, 관심 있으시면 구조도나 예제 코드도 보여드릴게요.
+
+<hr/><br/><br/>
 
