--- a/DB/Focus/흐름 정리.md
+++ b/DB/Focus/흐름 정리.md
@@ -176,4 +176,97 @@ DB 병목이 잘 발생하지 않습니다.
 추가적으로 MMORPG 구조에서 캐시(Redis)나 큐(Kafka, RabbitMQ 등)를 활용한 구조도 자주 사용되는데, 관심 있으시면 구조도나 예제 코드도 보여드릴게요.
 
 <hr/><br/><br/>
+위에서 연결되는 질문 <br/>
 
+# 질문4
+위에서 Read/Write 분리라는게 리플리케이션을 쓰라는 말이야? 그렇다고 한다면 리플리케이션을 도입하면 성능 향상이 어느정도 될까?
+
+# 답변4
+네, 정확합니다. <br/>
+"Read/Write 분리"는 보통 "MySQL 리플리케이션"을 기반으로 구현합니다. <br/>
+* Write (쓰기) - 마스터DB에서 처리
+* Read (읽기) - 슬레이브DB에서 처리 <br/>
+  C++ 서버는 읽기 쿼리를 슬레이브로 분산시켜서 전체 부하를 줄입니다.
+
+## MySQL 리플리케이션 구조 요약
+<img src="https://github.com/user-attachments/assets/9bc01f04-988f-4117-8a7c-09334d6457e6" width="300" height="200" />
+* Master -> Slave로 비동기 로그(바이너리 로그)를 통해 변경 내용이 전파됩니다.
+* 슬레이브는 쓰기 불가(읽기 전용)로 운영됩니다.
+
+## 리플리케이션을 도입하면 성능 향상이 어느 정도?
+성능 향상 폭은 상황에 따라 다르지만, 일반적으로는 다음과 같습니다.
+1. 읽기 부하를 크게 줄일 수 있다.<br/>
+   전체 트래픽에서 읽기 쿼리가 "50~90%"를 차지하는 경우가 많다. (예: 랭킹, 친구 목록, 아이템 확인 등)
+   이런 읽기 쿼리를 슬레이브로 보내면, 마스터는 오직 쓰기 처리만 집중할 수 있어 병목 완화됨
+2. 읽기 분산 개수만큼 선형적으로 확장 가능<br/>
+   슬레이브가 1대->2대->3대로 늘어나면, 병렬로 읽기 요청을 나눌 수 있어 성능이 거의 선형 확장됨
+   실제 MMORPG에서는 3~5대 슬레이브로 읽기를 분산하는 구조도 흔합니다.
+3. 마스터의 I/O, Lock 경합 감소<br/>
+   쓰기와 읽기가 섞이면 InnoDB 락, 버퍼 풀 경쟁, 디스크 I/O 경합이 발생함
+   읽기를 분리하면 이러한 경쟁 상황이 줄어들어, 쓰기 성능도 간접적으로 개선됩니다.
+
+## 단, 주의할 점
+<table>
+   <tr>
+      <th>주의 사항</th><th>설명</th>
+   </tr>
+   <tr>
+      <td>Replication 지연</td>
+      <td>
+         슬레이브는 마스터에 비동기로 따라가기 때문에 수 ms~수 초 지연 발생 가능.
+         (ex:방금 쓴 데이터가 슬레이브에서 안 보일 수 있음)
+      </td>
+   </tr>
+   <tr>
+      <td>트랜잭션 일관성 주의</td>
+      <td>읽기/쓰기 혼합 쿼리(예:쓰고 바로 읽기)는 슬레이브에 보내면 안됨</td>
+   </tr>
+   <tr>
+      <td>라우팅 로직 필요</td>
+      <td>C++ 서버 코드에서 읽기/쓰기를 구분해서 연결할 수 있는 구조 필요</td>
+   </tr>
+   <tr>
+      <td>장애 대응</td>
+      <td>마스터 장애 시 슬레이브를 승격하는 로직 필요(자동화 가능)</td>
+   </tr>
+</table>
+
+## MMORPG 게임 서버에서의 실질 효과 예시
+<table>
+   <tr>
+      <th>항목</th><th>리플리케이션 도입 전</th><th>도입 후 예상</th>
+   </tr>
+   <tr>
+      <td>DB CPU 사용률</td><td>70~90%</td><td>30~50%</td>
+   </tr>
+   <tr>
+      <td>응답 지연 시간</td><td>100ms 이상</td><td>20~50ms</td>
+   </tr>
+   <tr>
+      <td>커넥션 수</td><td>마스터 1000개</td><td>마스터 300개 + 슬레이브 2x350개</td>
+   </tr>
+   <tr>
+      <td>유저 확장성</td><td>1000명 동시</td><td>2000~3000명 이상 가능</td>
+   </tr>
+</table>
+
+##  결론
+<table>
+   <tr>
+      <th>항목</th><th>판단</th>
+   </tr>
+   <tr>
+      <td>리플리케이션이 Read/Write 분리를 의미하나?</td><td>맞습니다</td>
+   </tr>
+   <tr>
+      <td>성능 향상 가능성</td><td>읽기 비중이 높다면 효과 큼</td>
+   </tr>
+   <tr>
+      <td>도입 시기</td><td>샤딩보다는 먼저 고려할 확장 전략입니다.</td>
+   </tr>
+</table>
+
+* 원하시면 C++에서 슬레이브/마스터 구분 커넥션 샘플
+* MySQL 리플리케이션 설정 명령어
+* 읽기/쓰기 라우터 코드 예시<br/>
+도 도와드릴 수 있습니다.
