--- a/Docker/시작.md
+++ b/Docker/시작.md
@@ -66,6 +66,38 @@ docker image rm
 ```
 이미지는 dockerhub이라고 깃허브와 비슷한 개념을 하는 사이트에 저장되어 있으며 우리가 docker pull 명령을 하면 dockerhub으로부터 다운 받는 것이다.
 
+# 컨테이너 조회/중지/삭제
+```
+// 실행중인 컨테이너 조회
+docker ps
+
+// 중지된 컨테이너도 포함하여 조회
+docker ps -a
+
+// 컨테이너 중지 (Stop, Kill)
+// Stop : 정상적 종료
+docker stop b04 // 형식 : docker stop 컨테이너 ID
+// Kill : 강제 종료
+docker kill b04 // 형식 : docker kill 컨테이너 ID
+
+// 중지된 컨테이너 다시 실행
+docker run -d nginx
+
+// 컨테이너 삭제
+// 컨테이너가 실행중이면 삭제할 수 없다. 중지 후 삭제해야 한다.
+docker rm b04 // 형식 : docker rm 컨테이너 ID
+// 물론 강제 삭제 옵션이 있어서 실행중이라도 삭제할 수 있다.
+docker rm -f b04
+```
+"docker ps" 명령어로 실행중인 컨테이너를 조회하면 아래와 같이 나온다. <br/>
+<img width="800" height="100" alt="image" src="https://github.com/user-attachments/assets/aac6eaf6-b4b7-46d9-9c66-900d328e1c18" />
+"docker stop b04" 명령어로 컨테이너를 중지 후 "docker ps"로 컨테이너를 조회하면 나오는 것이 없다. <br/>
+"docker ps -a" 명령어로 모든 컨테이너를 조회하면 status가 exited로 중지된 컨테이너들이 보인다. <br/>
+<img width="800" height="100" alt="image" src="https://github.com/user-attachments/assets/eb00e37f-fbc0-48e5-9982-bc1cc8a1a02f" />
+
+# 컨테이너 로그 조회
+
+
 
 
 
