--- a/Docker/시작.md
+++ b/Docker/시작.md
@@ -96,7 +96,22 @@ docker rm -f b04
 <img width="800" height="100" alt="image" src="https://github.com/user-attachments/assets/eb00e37f-fbc0-48e5-9982-bc1cc8a1a02f" />
 
 # 컨테이너 로그 조회
+## 포그라운드(ForeGround) 실행
+```
+docker run nginx
+```
+위의 명령어를 실행하여 포그라운드로 실행하게 되면 아래와 같이 로그를 계속 출력하고 나는 입력은 할 수 없는 상태가 된다. <br/>
+<img width="700" height="300" alt="image" src="https://github.com/user-attachments/assets/ea5c8b0e-cd20-45e1-9550-eea5444cb464" />
 
+## 백그라운드(BackGround) 실행 후 logs 명령어로 조회
+
+```
+docker run -d nginx
+
+docker logs ee6
+
+docker logs --tail 10 ee6
+```
 
 
 
