--- a/Docker/시작.md
+++ b/Docker/시작.md
@@ -157,11 +157,8 @@ exit
 ```
 
 # Docker Volume (도커 볼륨)
-
-
-# docker 전체 흐름
-nginx를 실행할 것인데 docker를 사용해서 실행할 것이다.
-<img width="791" height="433" alt="image" src="https://github.com/user-attachments/assets/3a86e6df-9ce9-430c-b794-4714a625efd6" />
+### 컨테이너가 가진 문제점
+Docker를 활용하면 특정 프로그램을 컨테이너로 띄울 수 있다. 
 
 
 
