--- a/Docker/시작.md
+++ b/Docker/시작.md
@@ -65,9 +65,7 @@ docker pull nginx:stable-alpine3.19-perl
 // 이미지 삭제
 docker image rm
 ```
-이미지는 dockerhub이라고 깃허브와 비슷한 개념을 하는 사이트에 저장되어 있고, "docker pull" 명령을 하면 dockerhub으로부터 이미지를 다운 받는다.
-이미지를 다운 받고 컨테이너에서 이미지를 실행하게 되는데 이 과정(이미지 다운로드)은 생략 가능하다. 이후에 컨테이너 실행하는 단계에서 이미지가 없으면
-자동으로 dockerhub에서 다운로드한다.
+이미지는 dockerhub이라고 깃허브와 비슷한 개념을 하는 사이트에 저장되어 있고 여기서 원하는 이미지가 있는지 확인 후 "docker pull" 명령을 하면 dockerhub으로부터 이미지를 다운 받는다. 이미지를 다운로드하고 이 다음 과정에서 해당 이미지를 가지고 컨테이너를 실행하는데 컨테이너 실행할 때 해당 이미지가 없으면 dockerhub에서 자동으로 다운받기에 이 과정은 생략해도 된다. dockerhub에는 다운로드만 하는 것이 아니라 간단한 설명도 있기에 참고하면 좋다.
 
 # 컨테이너 실행/조회/중지/삭제
 ```
@@ -157,8 +155,58 @@ exit
 ```
 
 # Docker Volume (도커 볼륨)
-### 컨테이너가 가진 문제점
-Docker를 활용하면 특정 프로그램을 컨테이너로 띄울 수 있다. 
+Docker를 사용하여 특정 프로그램을 컨테이너로 띄워 사용할 수 있다. 이렇게 사용하다가 이 형식으로 쭉 사용하는 것이 아니라 기능을 추가하는 등의 유지보수를 해야하는 경우가 있다. Docker에서는 이러한 경우에 기존의 이미지를 수정하는 것이 아니라 새로운 이미지를 만들어 교체하는 방식을 사용한다. <br/>
+
+문제는 이러한 방식으로 기존 컨테이너에서 새로운 컨테이너로 교체되면 기존 컨테이너 내부에 있던 데이터가 삭제된다는 것이며 만약 이 컨테이너가 MySQL을 실행시키는 컨테이너였다면 MySQL에 저장된 데이터도 같이 삭제 되어버린다. 따라서 컨테이너 내부에 저장된 데이터가 삭제되면 안 되는 경우에는 볼륨(Volume)이라는 개념을 활용해야 한다. <br/>
+
+그래서 도커에서 볼륨이란, 도커 컨테이너에서 데이터를 영속적으로 저장하기 위한 방법으로, 볼륨은 컨테이너 자체의 저장 공간을 사용하지 않고 호스트의 저장 공간을 공유해서 사용하는 형태이다. <br/>
+<img width="500" height="300" alt="image" src="https://github.com/user-attachments/assets/ea02f614-5399-4c2d-929f-dc68ff03e570" />
+
+도커 볼륨 사용 명령어 <br/>
+<img width="744" height="418" alt="image" src="https://github.com/user-attachments/assets/42e97fbf-9138-4aa9-81bc-3df0d596a314" />
+호스트의 디렉토리 절대 경로에 디렉토리가 이미 존재할 경우, 호스트의 디렉토리가 컨테이너의 디렉토리를 덮어씌운다. <br/>
+호스트의 디렉토리 절대 경로에 디렉토리가 존재하지 않을 경우, 호스트의 디렉토리 절대 경로에 디렉토리를 새로 만들고 컨테이너의
+디렉토리에 있는 파일들을 호스트의 디렉토리로 복사해온다. <br/>
+
+# 실습 (MySQL)
+### 컨테이너 띄우기
+1. DockerHub에 접속하여 MySQL 이미지가 있는지 확인
+2. 컨테이너 실행
+```
+docker run -p 3306:3306 -d mysql
+```
+혹여나 아래와 같은 문구가 나온다면 해당 포트를 사용하고 있다는 것으로 해당 포트를 사용하고 있는 프로세스를 종료하던가 포트를 변경해주어야 한다. <br/>
+<img width="800" height="400" alt="image" src="https://github.com/user-attachments/assets/d029459b-a5aa-427b-8661-8c89020a0959" />
+
+위와 같이 실행 후 컨테이너가 잘 실행되었는지 확인한다. <br>
+<img width="800" height="300" alt="image" src="https://github.com/user-attachments/assets/65b5d7c2-7c07-41be-836b-bb67804293a9" />
+컨테이너가 실행되지 않고 중단되어 있는 상태이다. log를 통해서 확인해본다. <br/>
+<img width="800" height="300" alt="image" src="https://github.com/user-attachments/assets/088dc192-b104-476e-a0a1-30b4ff71f498" />
+"패스워드 설정을 하지 않아서 시작할 수 없다"고 하며 DockerHub의 MySQL 설명을 보면 패스워드를 설정해서 MySQL 컨테이너를 시작해야 하며 이를 참고하여 시작한다. <br/>
+```
+docker run -e MYSQL_ROOT_PASSWORD=password123 -d -p 3306:3306 mysql
+```
+-e (또는 -env) 옵션은 docker 컨테이너 환경에 환경 변수를 추가하는 것으로 위의 내용은 docker에 "MYSQL_ROOT_PASSWORD=password123"이라는 환경 변수를 추가하고 mysql에서 이를 참조하는 것이다. <br/>
+
+위의 명령어 이후 MySQL 컨테이너가 시작되었는지 확인 <br/>
+<img width="800" height="300" alt="image" src="https://github.com/user-attachments/assets/a64118b6-2fed-4afc-8433-455ced23e3fa" />
+잘 시작되어 있음이 확인됨 <br/>
+
+컨테이너에 접속하여 시스템 환경 변수 확인 <br/>
+<img width="1105" height="184" alt="image" src="https://github.com/user-attachments/assets/fb7f8cda-621c-4988-9cc2-706d7248eb65" />
+환경 변수 확인됨 <br/>
+
+호스트 환경에서 DB GUI 프로그램을 사용하여 접속 확인 <br/>
+datagrip, workbench, dbeaver 등의 프로그램이 있으며 해당 프로그램을 통해 연결을 확인하면 되며 연결 정보는 각자 설정해둔 값을 넣어주면 되는데 여기서는 아래와 같다. <br/>
+* Host : localhost
+* Port : 3306
+* User : root
+* Password : password123
+이렇게 하여 GUI를 통해 DB에 접속할 수 있으면 OK. <br/>
+여기까지의 내용을 도식화하면 아래와 같다. <br/>
+<img width="852" height="461" alt="image" src="https://github.com/user-attachments/assets/d7492c71-8ffa-47ca-8531-4a3f0bb14a5c" />
+
+
 
 
 
