--- a/Docker/시작.md
+++ b/Docker/시작.md
@@ -1,3 +1,8 @@
+도커는 리눅스가 기본. 윈도우에서 사용하려면? <br/>
+도커 데스크톱 설치 -> 설치 후 wsl 필요하다고 함. -> cmd에서 wsl 설치 <br/>
+
+<hr/><br/><br/>
+
 # Docker를 왜 배우는가
 Docker를 쓰는 이유에는 여러가지 장점이 있지만 그 중에서 핵심 장점 딱 1가지만 기억하자. <br/>
 ### 이식성
