--- a/게임서버프로그래밍교과서/멀티스레딩/멀티스레딩.md
+++ b/게임서버프로그래밍교과서/멀티스레딩/멀티스레딩.md
@@ -1,1 +1,31 @@
-d
+# 1.1 프로그램과 프로세스
+우리가 흔히 말하는 프로그램(program)이란 컴퓨터에서 실행되는 명령어 모음이 들어 있는 데이터 덩어리를 의미한다.
+크게 코드(code)와 데이터(data)로 구성되어 있다. <br/>
+
+우리가 프로그램을 더블클릭하여 실행하면 프로그램 안에 들어 잇는 명령어가 한 줄씩 실행되면서 프로그램은 뭔가 활동하는 상태가 된다.
+이를 프로세스(process)라고 한다. <br/>
+
+<img width="603" height="222" alt="image" src="https://github.com/user-attachments/assets/4715196b-a37b-4746-aa88-87be0db39792" /><br/>
+프로그램은 디스크에 있고 이를 실행하면 프로그램에 있는 코드와 데이터를 프로세스 메모리(RAM)로 로드한다. 프로세스 메모리에는 프로그램 코드와 데이터는 물론 힙(heap)과 스택(stack)도 공존한다. 스택에는 현재 실행중인 함수들의 호출 기록과 사용 중인 로컬 변수들이 들어 있다.<br/>
+
+윈도우 운영체제에서는 실행된 프로그램을 작업 관리자로 확인할 수 있다.<br/>
+<img width="442" height="338" alt="image" src="https://github.com/user-attachments/assets/ef2efca5-f8f3-470e-9689-40110e8c66ad" /><br/>
+위를 보면 실행 중인 프로세스는 여러 개임을 알 수 있고 같은 프로그램을 여러 개 동시에 실행할 수 도 있다. 이렇게 프로세스가 여러 개
+실행되고 있는 것을 멀티프로세싱(multi-processing)이라고 한다.<br/>
+
+# 1.2 스레드(thread)
+각 프로세스에는 독립된 메모리 공간이 있다. 기본적으로 서로 다른 프로세스는 상대방의 메모리 공간을 읽고 쓸 수 없다. <br/>
+
+일반적으로 운영체제는 대부분 스레드라는 기능을 제공한다. 스레드 역시 프로세스처럼 명령어를 한 줄씩 실행하는 기본 단위이다.
+스레드와 프로세스의 차이점은 다음과 같다.
+* 스레드는 한 프로세스 안에 여러 개가 있다.
+* 한 프로세스 안에 있는 스레드들은 해당 프로세스의 메모리 공간을 공유한다.
+* 스레드마다 스택을 가진다. 이는 각 스레드에서 실행되는 함수의 로컬 변수들이 스레드마다 있다는 뜻이다.
+
+프로세스와 스레드<br/>
+<img width="319" height="265" alt="image" src="https://github.com/user-attachments/assets/a5243bd8-bb73-4c28-bfc6-f3dd4829266e" /><br/>
+
+프로세스 안에 스레드가 하나로만 동작하는 모델을 싱글 스레드(single thread)라고 하고 스레드가 여러 개 있어 동시에 여러 처리가 한 번에 일어나는 모델을 멀티스레드(multi thread)라고 한다.
+
+싱글 스레드에서 기본으로 존재하는 스레드를 메인 스레드(main thread)라고 하고 멀티스레드를 위해 스레드를 더 추가할 수 있다.
+
